@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,7 +24,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -36,7 +35,6 @@ import org.springframework.core.KotlinDetector;
 import org.springframework.core.MethodIntrospector;
 import org.springframework.core.ReactiveAdapterRegistry;
 import org.springframework.core.annotation.AnnotatedElementUtils;
-import org.springframework.core.annotation.AnnotationAwareOrderComparator;
 import org.springframework.http.codec.HttpMessageReader;
 import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
@@ -55,8 +53,9 @@ import org.springframework.web.reactive.result.method.SyncInvocableHandlerMethod
 /**
  * Package-private class to assist {@link RequestMappingHandlerAdapter} with
  * resolving, initializing, and caching annotated methods declared in
- * {@code @Controller} and {@code @ControllerAdvice} components. Assists with
- * the following annotations:
+ * {@code @Controller} and {@code @ControllerAdvice} components.
+ *
+ * <p>Assists with the following annotations:
  * <ul>
  * <li>{@code @InitBinder}
  * <li>{@code @ModelAttribute}
@@ -83,7 +82,7 @@ class ControllerMethodResolver {
 					AnnotatedElementUtils.hasAnnotation(method, ModelAttribute.class));
 
 
-	private static Log logger = LogFactory.getLog(ControllerMethodResolver.class);
+	private static final Log logger = LogFactory.getLog(ControllerMethodResolver.class);
 
 	private final List<SyncHandlerMethodArgumentResolver> initBinderResolvers;
 
@@ -95,13 +94,11 @@ class ControllerMethodResolver {
 
 	private final ReactiveAdapterRegistry reactiveAdapterRegistry;
 
-
 	private final Map<Class<?>, Set<Method>> initBinderMethodCache = new ConcurrentHashMap<>(64);
 
 	private final Map<Class<?>, Set<Method>> modelAttributeMethodCache = new ConcurrentHashMap<>(64);
 
 	private final Map<Class<?>, ExceptionHandlerMethodResolver> exceptionHandlerCache = new ConcurrentHashMap<>(64);
-
 
 	private final Map<ControllerAdviceBean, Set<Method>> initBinderAdviceCache = new LinkedHashMap<>(64);
 
@@ -113,108 +110,108 @@ class ControllerMethodResolver {
 	private final Map<Class<?>, SessionAttributesHandler> sessionAttributesHandlerCache = new ConcurrentHashMap<>(64);
 
 
-	ControllerMethodResolver(ArgumentResolverConfigurer customResolvers, ReactiveAdapterRegistry reactiveRegistry,
+	ControllerMethodResolver(ArgumentResolverConfigurer customResolvers, ReactiveAdapterRegistry adapterRegistry,
 			ConfigurableApplicationContext context, List<HttpMessageReader<?>> readers) {
 
 		Assert.notNull(customResolvers, "ArgumentResolverConfigurer is required");
-		Assert.notNull(readers, "'messageReaders' is required");
-		Assert.notNull(reactiveRegistry, "ReactiveAdapterRegistry is required");
+		Assert.notNull(adapterRegistry, "ReactiveAdapterRegistry is required");
 		Assert.notNull(context, "ApplicationContext is required");
+		Assert.notNull(readers, "HttpMessageReader List is required");
 
-		this.initBinderResolvers = initBinderResolvers(customResolvers, reactiveRegistry, context);
-		this.modelAttributeResolvers = modelMethodResolvers(customResolvers, reactiveRegistry, context);
-		this.requestMappingResolvers = requestMappingResolvers(customResolvers, reactiveRegistry, context, readers);
-		this.exceptionHandlerResolvers = exceptionHandlerResolvers(customResolvers, reactiveRegistry, context);
-		this.reactiveAdapterRegistry = reactiveRegistry;
+		this.initBinderResolvers = initBinderResolvers(customResolvers, adapterRegistry, context);
+		this.modelAttributeResolvers = modelMethodResolvers(customResolvers, adapterRegistry, context);
+		this.requestMappingResolvers = requestMappingResolvers(customResolvers, adapterRegistry, context, readers);
+		this.exceptionHandlerResolvers = exceptionHandlerResolvers(customResolvers, adapterRegistry, context);
+		this.reactiveAdapterRegistry = adapterRegistry;
 
 		initControllerAdviceCaches(context);
 	}
 
 	private List<SyncHandlerMethodArgumentResolver> initBinderResolvers(
-			ArgumentResolverConfigurer customResolvers, ReactiveAdapterRegistry reactiveRegistry,
+			ArgumentResolverConfigurer customResolvers, ReactiveAdapterRegistry adapterRegistry,
 			ConfigurableApplicationContext context) {
 
-		return initResolvers(customResolvers, reactiveRegistry, context, false, Collections.emptyList()).stream()
-				.filter(resolver -> resolver instanceof SyncHandlerMethodArgumentResolver)
-				.map(resolver -> (SyncHandlerMethodArgumentResolver) resolver)
-				.collect(Collectors.toList());
+		return initResolvers(customResolvers, adapterRegistry, context, false, Collections.emptyList()).stream()
+				.filter(SyncHandlerMethodArgumentResolver.class::isInstance)
+				.map(SyncHandlerMethodArgumentResolver.class::cast)
+				.toList();
 	}
 
 	private static List<HandlerMethodArgumentResolver> modelMethodResolvers(
-			ArgumentResolverConfigurer customResolvers, ReactiveAdapterRegistry reactiveRegistry,
+			ArgumentResolverConfigurer customResolvers, ReactiveAdapterRegistry adapterRegistry,
 			ConfigurableApplicationContext context) {
 
-		return initResolvers(customResolvers, reactiveRegistry, context, true, Collections.emptyList());
+		return initResolvers(customResolvers, adapterRegistry, context, true, Collections.emptyList());
 	}
 
 	private static List<HandlerMethodArgumentResolver> requestMappingResolvers(
-			ArgumentResolverConfigurer customResolvers, ReactiveAdapterRegistry reactiveRegistry,
+			ArgumentResolverConfigurer customResolvers, ReactiveAdapterRegistry adapterRegistry,
 			ConfigurableApplicationContext context, List<HttpMessageReader<?>> readers) {
 
-		return initResolvers(customResolvers, reactiveRegistry, context, true, readers);
+		return initResolvers(customResolvers, adapterRegistry, context, true, readers);
 	}
 
 	private static List<HandlerMethodArgumentResolver> exceptionHandlerResolvers(
-			ArgumentResolverConfigurer customResolvers, ReactiveAdapterRegistry reactiveRegistry,
+			ArgumentResolverConfigurer customResolvers, ReactiveAdapterRegistry adapterRegistry,
 			ConfigurableApplicationContext context) {
 
-		return initResolvers(customResolvers, reactiveRegistry, context, false, Collections.emptyList());
+		return initResolvers(customResolvers, adapterRegistry, context, false, Collections.emptyList());
 	}
 
 	private static List<HandlerMethodArgumentResolver> initResolvers(ArgumentResolverConfigurer customResolvers,
-			ReactiveAdapterRegistry reactiveRegistry, ConfigurableApplicationContext context,
+			ReactiveAdapterRegistry adapterRegistry, ConfigurableApplicationContext context,
 			boolean supportDataBinding, List<HttpMessageReader<?>> readers) {
 
 		ConfigurableListableBeanFactory beanFactory = context.getBeanFactory();
 		boolean requestMappingMethod = !readers.isEmpty() && supportDataBinding;
 
 		// Annotation-based...
-		List<HandlerMethodArgumentResolver> result = new ArrayList<>();
-		result.add(new RequestParamMethodArgumentResolver(beanFactory, reactiveRegistry, false));
-		result.add(new RequestParamMapMethodArgumentResolver(reactiveRegistry));
-		result.add(new PathVariableMethodArgumentResolver(beanFactory, reactiveRegistry));
-		result.add(new PathVariableMapMethodArgumentResolver(reactiveRegistry));
-		result.add(new MatrixVariableMethodArgumentResolver(beanFactory, reactiveRegistry));
-		result.add(new MatrixVariableMapMethodArgumentResolver(reactiveRegistry));
+		List<HandlerMethodArgumentResolver> result = new ArrayList<>(30);
+		result.add(new RequestParamMethodArgumentResolver(beanFactory, adapterRegistry, false));
+		result.add(new RequestParamMapMethodArgumentResolver(adapterRegistry));
+		result.add(new PathVariableMethodArgumentResolver(beanFactory, adapterRegistry));
+		result.add(new PathVariableMapMethodArgumentResolver(adapterRegistry));
+		result.add(new MatrixVariableMethodArgumentResolver(beanFactory, adapterRegistry));
+		result.add(new MatrixVariableMapMethodArgumentResolver(adapterRegistry));
 		if (!readers.isEmpty()) {
-			result.add(new RequestBodyArgumentResolver(readers, reactiveRegistry));
-			result.add(new RequestPartMethodArgumentResolver(readers, reactiveRegistry));
+			result.add(new RequestBodyMethodArgumentResolver(readers, adapterRegistry));
+			result.add(new RequestPartMethodArgumentResolver(readers, adapterRegistry));
 		}
 		if (supportDataBinding) {
-			result.add(new ModelAttributeMethodArgumentResolver(reactiveRegistry, false));
+			result.add(new ModelAttributeMethodArgumentResolver(adapterRegistry, false));
 		}
-		result.add(new RequestHeaderMethodArgumentResolver(beanFactory, reactiveRegistry));
-		result.add(new RequestHeaderMapMethodArgumentResolver(reactiveRegistry));
-		result.add(new CookieValueMethodArgumentResolver(beanFactory, reactiveRegistry));
-		result.add(new ExpressionValueMethodArgumentResolver(beanFactory, reactiveRegistry));
-		result.add(new SessionAttributeMethodArgumentResolver(beanFactory, reactiveRegistry));
-		result.add(new RequestAttributeMethodArgumentResolver(beanFactory, reactiveRegistry));
+		result.add(new RequestHeaderMethodArgumentResolver(beanFactory, adapterRegistry));
+		result.add(new RequestHeaderMapMethodArgumentResolver(adapterRegistry));
+		result.add(new CookieValueMethodArgumentResolver(beanFactory, adapterRegistry));
+		result.add(new ExpressionValueMethodArgumentResolver(beanFactory, adapterRegistry));
+		result.add(new SessionAttributeMethodArgumentResolver(beanFactory, adapterRegistry));
+		result.add(new RequestAttributeMethodArgumentResolver(beanFactory, adapterRegistry));
 
 		// Type-based...
-		if (KotlinDetector.isKotlinPresent()) {
-			result.add(new ContinuationHandlerMethodArgumentResolver());
-		}
 		if (!readers.isEmpty()) {
-			result.add(new HttpEntityArgumentResolver(readers, reactiveRegistry));
+			result.add(new HttpEntityMethodArgumentResolver(readers, adapterRegistry));
 		}
-		result.add(new ModelArgumentResolver(reactiveRegistry));
+		result.add(new ModelMethodArgumentResolver(adapterRegistry));
 		if (supportDataBinding) {
-			result.add(new ErrorsMethodArgumentResolver(reactiveRegistry));
+			result.add(new ErrorsMethodArgumentResolver(adapterRegistry));
 		}
-		result.add(new ServerWebExchangeArgumentResolver(reactiveRegistry));
-		result.add(new PrincipalArgumentResolver(reactiveRegistry));
+		result.add(new ServerWebExchangeMethodArgumentResolver(adapterRegistry));
+		result.add(new PrincipalMethodArgumentResolver(adapterRegistry));
 		if (requestMappingMethod) {
 			result.add(new SessionStatusMethodArgumentResolver());
 		}
-		result.add(new WebSessionArgumentResolver(reactiveRegistry));
+		result.add(new WebSessionMethodArgumentResolver(adapterRegistry));
+		if (KotlinDetector.isKotlinPresent()) {
+			result.add(new ContinuationHandlerMethodArgumentResolver());
+		}
 
 		// Custom...
 		result.addAll(customResolvers.getCustomResolvers());
 
 		// Catch-all...
-		result.add(new RequestParamMethodArgumentResolver(beanFactory, reactiveRegistry, true));
+		result.add(new RequestParamMethodArgumentResolver(beanFactory, adapterRegistry, true));
 		if (supportDataBinding) {
-			result.add(new ModelAttributeMethodArgumentResolver(reactiveRegistry, true));
+			result.add(new ModelAttributeMethodArgumentResolver(adapterRegistry, true));
 		}
 
 		return result;
@@ -222,8 +219,6 @@ class ControllerMethodResolver {
 
 	private void initControllerAdviceCaches(ApplicationContext applicationContext) {
 		List<ControllerAdviceBean> beans = ControllerAdviceBean.findAnnotatedBeans(applicationContext);
-		AnnotationAwareOrderComparator.sort(beans);
-
 		for (ControllerAdviceBean bean : beans) {
 			Class<?> beanType = bean.getBeanType();
 			if (beanType != null) {
@@ -335,38 +330,47 @@ class ControllerMethodResolver {
 	}
 
 	/**
-	 * Find an {@code @ExceptionHandler} method in {@code @ControllerAdvice}
-	 * components or in the controller of the given {@code @RequestMapping} method.
+	 * Look for an {@code @ExceptionHandler} method within the class of the given
+	 * controller method, and also within {@code @ControllerAdvice} classes that
+	 * are applicable to the class of the given controller method.
+	 * @param ex the exception to find a handler for
+	 * @param handlerMethod the controller method that raised the exception, or
+	 * if {@code null}, check only {@code @ControllerAdvice} classes.
 	 */
 	@Nullable
-	public InvocableHandlerMethod getExceptionHandlerMethod(Throwable ex, HandlerMethod handlerMethod) {
+	public InvocableHandlerMethod getExceptionHandlerMethod(Throwable ex, @Nullable HandlerMethod handlerMethod) {
 
-		Class<?> handlerType = handlerMethod.getBeanType();
+		Class<?> handlerType = (handlerMethod != null ? handlerMethod.getBeanType() : null);
+		Object exceptionHandlerObject = null;
+		Method exceptionHandlerMethod = null;
 
-		// Controller-local first...
-		Object targetBean = handlerMethod.getBean();
-		Method targetMethod = this.exceptionHandlerCache
-				.computeIfAbsent(handlerType, ExceptionHandlerMethodResolver::new)
-				.resolveMethodByThrowable(ex);
+		if (handlerType != null) {
+			// Controller-local first...
+			exceptionHandlerObject = handlerMethod.getBean();
+			exceptionHandlerMethod = this.exceptionHandlerCache
+					.computeIfAbsent(handlerType, ExceptionHandlerMethodResolver::new)
+					.resolveMethodByThrowable(ex);
+		}
 
-		if (targetMethod == null) {
+		if (exceptionHandlerMethod == null) {
 			// Global exception handlers...
-			for (ControllerAdviceBean advice : this.exceptionHandlerAdviceCache.keySet()) {
+			for (Map.Entry<ControllerAdviceBean, ExceptionHandlerMethodResolver> entry : this.exceptionHandlerAdviceCache.entrySet()) {
+				ControllerAdviceBean advice = entry.getKey();
 				if (advice.isApplicableToBeanType(handlerType)) {
-					targetBean = advice.resolveBean();
-					targetMethod = this.exceptionHandlerAdviceCache.get(advice).resolveMethodByThrowable(ex);
-					if (targetMethod != null) {
+					exceptionHandlerMethod = entry.getValue().resolveMethodByThrowable(ex);
+					if (exceptionHandlerMethod != null) {
+						exceptionHandlerObject = advice.resolveBean();
 						break;
 					}
 				}
 			}
 		}
 
-		if (targetMethod == null) {
+		if (exceptionHandlerObject == null || exceptionHandlerMethod == null) {
 			return null;
 		}
 
-		InvocableHandlerMethod invocable = new InvocableHandlerMethod(targetBean, targetMethod);
+		InvocableHandlerMethod invocable = new InvocableHandlerMethod(exceptionHandlerObject, exceptionHandlerMethod);
 		invocable.setArgumentResolvers(this.exceptionHandlerResolvers);
 		return invocable;
 	}
@@ -377,17 +381,7 @@ class ControllerMethodResolver {
 	 */
 	public SessionAttributesHandler getSessionAttributesHandler(HandlerMethod handlerMethod) {
 		Class<?> handlerType = handlerMethod.getBeanType();
-		SessionAttributesHandler result = this.sessionAttributesHandlerCache.get(handlerType);
-		if (result == null) {
-			synchronized (this.sessionAttributesHandlerCache) {
-				result = this.sessionAttributesHandlerCache.get(handlerType);
-				if (result == null) {
-					result = new SessionAttributesHandler(handlerType);
-					this.sessionAttributesHandlerCache.put(handlerType, result);
-				}
-			}
-		}
-		return result;
+		return this.sessionAttributesHandlerCache.computeIfAbsent(handlerType, SessionAttributesHandler::new);
 	}
 
 }
