@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,70 +17,79 @@
 package org.springframework.web.reactive.resource;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
+import java.nio.file.Paths;
 import java.time.Duration;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.Stream;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
 
 import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.core.io.buffer.DataBuffer;
-import org.springframework.core.io.buffer.DataBufferFactory;
 import org.springframework.core.io.buffer.DataBufferUtils;
 import org.springframework.core.io.buffer.DefaultDataBufferFactory;
-import org.springframework.core.io.buffer.support.DataBufferTestUtils;
 import org.springframework.http.CacheControl;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.server.PathContainer;
-import org.springframework.mock.http.server.reactive.test.MockServerHttpRequest;
-import org.springframework.mock.http.server.reactive.test.MockServerHttpResponse;
-import org.springframework.mock.web.test.server.MockServerWebExchange;
+import org.springframework.util.ClassUtils;
 import org.springframework.util.StringUtils;
 import org.springframework.web.reactive.HandlerMapping;
 import org.springframework.web.server.MethodNotAllowedException;
 import org.springframework.web.server.ResponseStatusException;
 import org.springframework.web.server.ServerWebExchange;
+import org.springframework.web.testfixture.http.server.reactive.MockServerHttpRequest;
+import org.springframework.web.testfixture.http.server.reactive.MockServerHttpResponse;
+import org.springframework.web.testfixture.server.MockServerWebExchange;
+import org.springframework.web.util.UriUtils;
 
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.*;
+import static java.nio.charset.StandardCharsets.UTF_8;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.assertj.core.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.mock;
 
 /**
  * Unit tests for {@link ResourceWebHandler}.
  *
  * @author Rossen Stoyanchev
+ * @author Sam Brannen
  */
-public class ResourceWebHandlerTests {
+class ResourceWebHandlerTests {
 
 	private static final Duration TIMEOUT = Duration.ofSeconds(1);
 
+	private final ClassPathResource testResource = new ClassPathResource("test/", getClass());
+	private final ClassPathResource testAlternatePathResource = new ClassPathResource("testalternatepath/", getClass());
+	private final ClassPathResource webjarsResource = new ClassPathResource("META-INF/resources/webjars/");
 
 	private ResourceWebHandler handler;
 
-	private DataBufferFactory bufferFactory = new DefaultDataBufferFactory();
 
-
-	@Before
-	public void setup() throws Exception {
-		List<Resource> locations = new ArrayList<>(2);
-		locations.add(new ClassPathResource("test/", getClass()));
-		locations.add(new ClassPathResource("testalternatepath/", getClass()));
-		locations.add(new ClassPathResource("META-INF/resources/webjars/"));
+	@BeforeEach
+	void setup() throws Exception {
+		List<Resource> locations = List.of(
+				this.testResource,
+				this.testAlternatePathResource,
+				this.webjarsResource);
 
 		this.handler = new ResourceWebHandler();
 		this.handler.setLocations(locations);
@@ -90,141 +99,194 @@ public class ResourceWebHandlerTests {
 
 
 	@Test
-	public void getResource() throws Exception {
+	void getResource() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		HttpHeaders headers = exchange.getResponse().getHeaders();
-		assertEquals(MediaType.parseMediaType("text/css"), headers.getContentType());
-		assertEquals(17, headers.getContentLength());
-		assertEquals("max-age=3600", headers.getCacheControl());
-		assertTrue(headers.containsKey("Last-Modified"));
-		assertEquals(headers.getLastModified() / 1000, resourceLastModifiedDate("test/foo.css") / 1000);
-		assertEquals("bytes", headers.getFirst("Accept-Ranges"));
-		assertEquals(1, headers.get("Accept-Ranges").size());
+		assertThat(headers.getContentType()).isEqualTo(MediaType.parseMediaType("text/css"));
+		assertThat(headers.getContentLength()).isEqualTo(17);
+		assertThat(headers.getCacheControl()).isEqualTo("max-age=3600");
+		assertThat(headers.containsKey("Last-Modified")).isTrue();
+		assertThat(resourceLastModifiedDate("test/foo.css") / 1000).isEqualTo(headers.getLastModified() / 1000);
+		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "h1 { color:red; }");
 	}
 
 	@Test
-	public void getResourceHttpHeader() throws Exception {
+	void getResourceHttpHeader() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.head(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.handle(exchange).block(TIMEOUT);
 
-		assertNull(exchange.getResponse().getStatusCode());
+		assertThat((Object) exchange.getResponse().getStatusCode()).isNull();
 		HttpHeaders headers = exchange.getResponse().getHeaders();
-		assertEquals(MediaType.parseMediaType("text/css"), headers.getContentType());
-		assertEquals(17, headers.getContentLength());
-		assertEquals("max-age=3600", headers.getCacheControl());
-		assertTrue(headers.containsKey("Last-Modified"));
-		assertEquals(headers.getLastModified() / 1000, resourceLastModifiedDate("test/foo.css") / 1000);
-		assertEquals("bytes", headers.getFirst("Accept-Ranges"));
-		assertEquals(1, headers.get("Accept-Ranges").size());
+		assertThat(headers.getContentType()).isEqualTo(MediaType.parseMediaType("text/css"));
+		assertThat(headers.getContentLength()).isEqualTo(17);
+		assertThat(headers.getCacheControl()).isEqualTo("max-age=3600");
+		assertThat(headers.containsKey("Last-Modified")).isTrue();
+		assertThat(resourceLastModifiedDate("test/foo.css") / 1000).isEqualTo(headers.getLastModified() / 1000);
+		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 
 		StepVerifier.create(exchange.getResponse().getBody())
-				.expectErrorMatches(ex -> ex.getMessage().startsWith("No content was written"))
-				.verify();
+				.verifyComplete();
 	}
 
 	@Test
-	public void getResourceHttpOptions() {
+	void getResourceHttpOptions() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.options(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.handle(exchange).block(TIMEOUT);
 
-		assertNull(exchange.getResponse().getStatusCode());
-		assertEquals("GET,HEAD,OPTIONS", exchange.getResponse().getHeaders().getFirst("Allow"));
+		assertThat(exchange.getResponse().getStatusCode()).isNull();
+		assertThat(exchange.getResponse().getHeaders().getFirst("Allow")).isEqualTo("GET,HEAD,OPTIONS");
 	}
 
 	@Test
-	public void getResourceNoCache() throws Exception {
+	void getResourceNoCache() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.setCacheControl(CacheControl.noStore());
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		MockServerHttpResponse response = exchange.getResponse();
-		assertEquals("no-store", response.getHeaders().getCacheControl());
-		assertTrue(response.getHeaders().containsKey("Last-Modified"));
-		assertEquals(response.getHeaders().getLastModified() / 1000, resourceLastModifiedDate("test/foo.css") / 1000);
-		assertEquals("bytes", response.getHeaders().getFirst("Accept-Ranges"));
-		assertEquals(1, response.getHeaders().get("Accept-Ranges").size());
+		assertThat(response.getHeaders().getCacheControl()).isEqualTo("no-store");
+		assertThat(response.getHeaders().containsKey("Last-Modified")).isTrue();
+		assertThat(resourceLastModifiedDate("test/foo.css") / 1000).isEqualTo(response.getHeaders().getLastModified() / 1000);
+		assertThat(response.getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(response.getHeaders().get("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getVersionedResource() throws Exception {
+	void getVersionedResource() throws Exception {
 		VersionResourceResolver versionResolver = new VersionResourceResolver();
 		versionResolver.addFixedVersionStrategy("versionString", "/**");
-		this.handler.setResourceResolvers(Arrays.asList(versionResolver, new PathResourceResolver()));
+		this.handler.setResourceResolvers(List.of(versionResolver, new PathResourceResolver()));
 		this.handler.afterPropertiesSet();
 
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "versionString/foo.css");
 		this.handler.handle(exchange).block(TIMEOUT);
 
-		assertEquals("\"versionString\"", exchange.getResponse().getHeaders().getETag());
-		assertEquals("bytes", exchange.getResponse().getHeaders().getFirst("Accept-Ranges"));
-		assertEquals(1, exchange.getResponse().getHeaders().get("Accept-Ranges").size());
+		assertThat(exchange.getResponse().getHeaders().getETag()).isEqualTo("W/\"versionString\"");
+		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getResourceWithHtmlMediaType() throws Exception {
+	void getResourceWithHtmlMediaType() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "foo.html");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		HttpHeaders headers = exchange.getResponse().getHeaders();
-		assertEquals(MediaType.TEXT_HTML, headers.getContentType());
-		assertEquals("max-age=3600", headers.getCacheControl());
-		assertTrue(headers.containsKey("Last-Modified"));
-		assertEquals(headers.getLastModified() / 1000, resourceLastModifiedDate("test/foo.html") / 1000);
-		assertEquals("bytes", headers.getFirst("Accept-Ranges"));
-		assertEquals(1, headers.get("Accept-Ranges").size());
+		assertThat(headers.getContentType()).isEqualTo(MediaType.TEXT_HTML);
+		assertThat(headers.getCacheControl()).isEqualTo("max-age=3600");
+		assertThat(headers.containsKey("Last-Modified")).isTrue();
+		assertThat(resourceLastModifiedDate("test/foo.html") / 1000).isEqualTo(headers.getLastModified() / 1000);
+		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getResourceFromAlternatePath() throws Exception {
+	void getResourceFromAlternatePath() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "baz.css");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		HttpHeaders headers = exchange.getResponse().getHeaders();
-		assertEquals(MediaType.parseMediaType("text/css"), headers.getContentType());
-		assertEquals(17, headers.getContentLength());
-		assertEquals("max-age=3600", headers.getCacheControl());
-		assertTrue(headers.containsKey("Last-Modified"));
-		assertEquals(headers.getLastModified() / 1000, resourceLastModifiedDate("testalternatepath/baz.css") / 1000);
-		assertEquals("bytes", headers.getFirst("Accept-Ranges"));
-		assertEquals(1, headers.get("Accept-Ranges").size());
+		assertThat(headers.getContentType()).isEqualTo(MediaType.parseMediaType("text/css"));
+		assertThat(headers.getContentLength()).isEqualTo(17);
+		assertThat(headers.getCacheControl()).isEqualTo("max-age=3600");
+		assertThat(headers.containsKey("Last-Modified")).isTrue();
+		assertThat(resourceLastModifiedDate("testalternatepath/baz.css") / 1000).isEqualTo(headers.getLastModified() / 1000);
+		assertThat(headers.getFirst("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(headers.get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "h1 { color:red; }");
 	}
 
 	@Test
-	public void getResourceFromSubDirectory() {
+	void getResourceFromSubDirectory() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "js/foo.js");
 		this.handler.handle(exchange).block(TIMEOUT);
 
-		assertEquals(MediaType.parseMediaType("application/javascript"),
-				exchange.getResponse().getHeaders().getContentType());
+		assertThat(exchange.getResponse().getHeaders().getContentType()).isEqualTo(MediaType.parseMediaType("application/javascript"));
 		assertResponseBody(exchange, "function foo() { console.log(\"hello world\"); }");
 	}
 
 	@Test
-	public void getResourceFromSubDirectoryOfAlternatePath() {
+	void getResourceFromSubDirectoryOfAlternatePath() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "js/baz.js");
 		this.handler.handle(exchange).block(TIMEOUT);
 
 		HttpHeaders headers = exchange.getResponse().getHeaders();
-		assertEquals(MediaType.parseMediaType("application/javascript"), headers.getContentType());
+		assertThat(headers.getContentType()).isEqualTo(MediaType.parseMediaType("application/javascript"));
 		assertResponseBody(exchange, "function foo() { console.log(\"hello world\"); }");
 	}
 
+	@Test
+	void getResourceWithRegisteredMediaType() throws Exception {
+		MediaType mediaType = new MediaType("foo", "bar");
+
+		ResourceWebHandler handler = new ResourceWebHandler();
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
+		handler.setMediaTypes(Collections.singletonMap("bar", mediaType));
+		handler.afterPropertiesSet();
+
+		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
+		setPathWithinHandlerMapping(exchange, "foo.bar");
+		handler.handle(exchange).block(TIMEOUT);
+
+		HttpHeaders headers = exchange.getResponse().getHeaders();
+		assertThat(headers.getContentType()).isEqualTo(mediaType);
+		assertResponseBody(exchange, "foo bar foo bar foo bar");
+	}
+
+	@Test
+	void getResourceFromFileSystem() throws Exception {
+		String packagePath = ClassUtils.classPackageAsResourcePath(getClass());
+		String path = Paths.get("src/test/resources", packagePath).normalize() + "/";
+
+		ResourceWebHandler handler = new ResourceWebHandler();
+		handler.setLocations(List.of(new FileSystemResource(path)));
+		handler.afterPropertiesSet();
+
+		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
+		setPathWithinHandlerMapping(exchange, UriUtils.encodePath("test/foo with spaces.css", UTF_8));
+		handler.handle(exchange).block(TIMEOUT);
+
+		HttpHeaders headers = exchange.getResponse().getHeaders();
+		assertThat(headers.getContentType()).isEqualTo(MediaType.parseMediaType("text/css"));
+		assertThat(headers.getContentLength()).isEqualTo(17);
+		assertResponseBody(exchange, "h1 { color:red; }");
+	}
+
+	@Test  // gh-27538, gh-27624
+	void filterNonExistingLocations() throws Exception {
+		List<Resource> inputLocations = List.of(
+				new ClassPathResource("test/", getClass()),
+				new ClassPathResource("testalternatepath/", getClass()),
+				new ClassPathResource("nosuchpath/", getClass()));
+
+		ResourceWebHandler handler = new ResourceWebHandler();
+		handler.setLocations(inputLocations);
+		handler.setOptimizeLocations(true);
+		handler.afterPropertiesSet();
+
+		List<Resource> actual = handler.getLocations();
+		assertThat(actual).hasSize(2);
+		assertThat(actual.get(0).getURL().toString()).endsWith("test/");
+		assertThat(actual.get(1).getURL().toString()).endsWith("testalternatepath/");
+	}
+
 	@Test // SPR-14577
-	public void getMediaTypeWithFavorPathExtensionOff() throws Exception {
-		List<Resource> paths = Collections.singletonList(new ClassPathResource("test/", getClass()));
+	void getMediaTypeWithFavorPathExtensionOff() throws Exception {
+		List<Resource> paths = List.of(new ClassPathResource("test/", getClass()));
 		ResourceWebHandler handler = new ResourceWebHandler();
 		handler.setLocations(paths);
 		handler.afterPropertiesSet();
@@ -234,23 +296,23 @@ public class ResourceWebHandlerTests {
 		setPathWithinHandlerMapping(exchange, "foo.html");
 		handler.handle(exchange).block(TIMEOUT);
 
-		assertEquals(MediaType.TEXT_HTML, exchange.getResponse().getHeaders().getContentType());
+		assertThat(exchange.getResponse().getHeaders().getContentType()).isEqualTo(MediaType.TEXT_HTML);
 	}
 
 	@Test
-	public void testInvalidPath() throws Exception {
+	void invalidPath() throws Exception {
 
 		// Use mock ResourceResolver: i.e. we're only testing upfront validations...
 
 		Resource resource = mock(Resource.class);
-		when(resource.getFilename()).thenThrow(new AssertionError("Resource should not be resolved"));
-		when(resource.getInputStream()).thenThrow(new AssertionError("Resource should not be resolved"));
+		given(resource.getFilename()).willThrow(new AssertionError("Resource should not be resolved"));
+		given(resource.getInputStream()).willThrow(new AssertionError("Resource should not be resolved"));
 		ResourceResolver resolver = mock(ResourceResolver.class);
-		when(resolver.resolveResource(any(), any(), any(), any())).thenReturn(Mono.just(resource));
+		given(resolver.resolveResource(any(), any(), any(), any())).willReturn(Mono.just(resource));
 
 		ResourceWebHandler handler = new ResourceWebHandler();
-		handler.setLocations(Collections.singletonList(new ClassPathResource("test/", getClass())));
-		handler.setResourceResolvers(Collections.singletonList(resolver));
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
+		handler.setResourceResolvers(List.of(resolver));
 		handler.afterPropertiesSet();
 
 		testInvalidPath("../testsecret/secret.txt", handler);
@@ -258,7 +320,7 @@ public class ResourceWebHandlerTests {
 		testInvalidPath(":/../../testsecret/secret.txt", handler);
 
 		Resource location = new UrlResource(getClass().getResource("./test/"));
-		this.handler.setLocations(Collections.singletonList(location));
+		handler.setLocations(List.of(location));
 		Resource secretResource = new UrlResource(getClass().getResource("testsecret/secret.txt"));
 		String secretPath = secretResource.getURL().getPath();
 
@@ -278,39 +340,34 @@ public class ResourceWebHandlerTests {
 
 		StepVerifier.create(handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
-					assertThat(err, instanceOf(ResponseStatusException.class));
-					assertEquals(HttpStatus.NOT_FOUND, ((ResponseStatusException) err).getStatus());
+					assertThat(err).isInstanceOf(ResponseStatusException.class);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 	}
 
-	@Test
-	public void testResolvePathWithTraversal() throws Exception {
-		for (HttpMethod method : HttpMethod.values()) {
-			testResolvePathWithTraversal(method);
-		}
-	}
-
-	private void testResolvePathWithTraversal(HttpMethod httpMethod) throws Exception {
+	@ParameterizedTest
+	@MethodSource("httpMethods")
+	void resolvePathWithTraversal(HttpMethod method) throws Exception {
 		Resource location = new ClassPathResource("test/", getClass());
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 
-		testResolvePathWithTraversal(httpMethod, "../testsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, "test/../../testsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, ":/../../testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "../testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "test/../../testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, ":/../../testsecret/secret.txt", location);
 
 		location = new UrlResource(getClass().getResource("./test/"));
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 		Resource secretResource = new UrlResource(getClass().getResource("testsecret/secret.txt"));
 		String secretPath = secretResource.getURL().getPath();
 
-		testResolvePathWithTraversal(httpMethod, "file:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "/file:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "url:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "/url:" + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "////../.." + secretPath, location);
-		testResolvePathWithTraversal(httpMethod, "/%2E%2E/testsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, "%2F%2F%2E%2E%2F%2Ftestsecret/secret.txt", location);
-		testResolvePathWithTraversal(httpMethod, "url:" + secretPath, location);
+		testResolvePathWithTraversal(method, "file:" + secretPath, location);
+		testResolvePathWithTraversal(method, "/file:" + secretPath, location);
+		testResolvePathWithTraversal(method, "url:" + secretPath, location);
+		testResolvePathWithTraversal(method, "/url:" + secretPath, location);
+		testResolvePathWithTraversal(method, "////../.." + secretPath, location);
+		testResolvePathWithTraversal(method, "/%2E%2E/testsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "%2F%2F%2E%2E%2F%2Ftestsecret/secret.txt", location);
+		testResolvePathWithTraversal(method, "url:" + secretPath, location);
 
 		// The following tests fail with a MalformedURLException on Windows
 		// testResolvePathWithTraversal(location, "/" + secretPath);
@@ -324,8 +381,8 @@ public class ResourceWebHandlerTests {
 		setPathWithinHandlerMapping(exchange, requestPath);
 		StepVerifier.create(this.handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
-					assertThat(err, instanceOf(ResponseStatusException.class));
-					assertEquals(HttpStatus.NOT_FOUND, ((ResponseStatusException) err).getStatus());
+					assertThat(err).isInstanceOf(ResponseStatusException.class);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				})
 				.verify(TIMEOUT);
 		if (!location.createRelative(requestPath).exists() && !requestPath.contains(":")) {
@@ -334,47 +391,44 @@ public class ResourceWebHandlerTests {
 	}
 
 	@Test
-	public void processPath() {
-		assertSame("/foo/bar", this.handler.processPath("/foo/bar"));
-		assertSame("foo/bar", this.handler.processPath("foo/bar"));
+	void processPath() {
+		assertThat(this.handler.processPath("/foo/bar")).isSameAs("/foo/bar");
+		assertThat(this.handler.processPath("foo/bar")).isSameAs("foo/bar");
 
 		// leading whitespace control characters (00-1F)
-		assertEquals("/foo/bar", this.handler.processPath("  /foo/bar"));
-		assertEquals("/foo/bar", this.handler.processPath((char) 1 + "/foo/bar"));
-		assertEquals("/foo/bar", this.handler.processPath((char) 31 + "/foo/bar"));
-		assertEquals("foo/bar", this.handler.processPath("  foo/bar"));
-		assertEquals("foo/bar", this.handler.processPath((char) 31 + "foo/bar"));
+		assertThat(this.handler.processPath("  /foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath((char) 1 + "/foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath((char) 31 + "/foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath("  foo/bar")).isEqualTo("foo/bar");
+		assertThat(this.handler.processPath((char) 31 + "foo/bar")).isEqualTo("foo/bar");
 
 		// leading control character 0x7F (DEL)
-		assertEquals("/foo/bar", this.handler.processPath((char) 127 + "/foo/bar"));
-		assertEquals("/foo/bar", this.handler.processPath((char) 127 + "/foo/bar"));
+		assertThat(this.handler.processPath((char) 127 + "/foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath((char) 127 + "/foo/bar")).isEqualTo("/foo/bar");
 
 		// leading control and '/' characters
-		assertEquals("/foo/bar", this.handler.processPath("  /  foo/bar"));
-		assertEquals("/foo/bar", this.handler.processPath("  /  /  foo/bar"));
-		assertEquals("/foo/bar", this.handler.processPath("  // /// ////  foo/bar"));
-		assertEquals("/foo/bar", this.handler.processPath((char) 1 + " / " + (char) 127 + " // foo/bar"));
+		assertThat(this.handler.processPath("  /  foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath("  /  /  foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath("  // /// ////  foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath((char) 1 + " / " + (char) 127 + " // foo/bar")).isEqualTo("/foo/bar");
 
 		// root or empty path
-		assertEquals("", this.handler.processPath("   "));
-		assertEquals("/", this.handler.processPath("/"));
-		assertEquals("/", this.handler.processPath("///"));
-		assertEquals("/", this.handler.processPath("/ /   / "));
+		assertThat(this.handler.processPath("   ")).isEqualTo("");
+		assertThat(this.handler.processPath("/")).isEqualTo("/");
+		assertThat(this.handler.processPath("///")).isEqualTo("/");
+		assertThat(this.handler.processPath("/ /   / ")).isEqualTo("/");
 	}
 
 	@Test
-	public void initAllowedLocations() {
+	void initAllowedLocations() {
 		PathResourceResolver resolver = (PathResourceResolver) this.handler.getResourceResolvers().get(0);
 		Resource[] locations = resolver.getAllowedLocations();
 
-		assertEquals(3, locations.length);
-		assertEquals("test/", ((ClassPathResource) locations[0]).getPath());
-		assertEquals("testalternatepath/", ((ClassPathResource) locations[1]).getPath());
-		assertEquals("META-INF/resources/webjars/", ((ClassPathResource) locations[2]).getPath());
+		assertThat(locations).containsExactly(this.testResource, this.testAlternatePathResource, this.webjarsResource);
 	}
 
 	@Test
-	public void initAllowedLocationsWithExplicitConfiguration() throws Exception {
+	void initAllowedLocationsWithExplicitConfiguration() throws Exception {
 		ClassPathResource location1 = new ClassPathResource("test/", getClass());
 		ClassPathResource location2 = new ClassPathResource("testalternatepath/", getClass());
 
@@ -382,190 +436,185 @@ public class ResourceWebHandlerTests {
 		pathResolver.setAllowedLocations(location1);
 
 		ResourceWebHandler handler = new ResourceWebHandler();
-		handler.setResourceResolvers(Collections.singletonList(pathResolver));
-		handler.setLocations(Arrays.asList(location1, location2));
+		handler.setResourceResolvers(List.of(pathResolver));
+		handler.setLocations(List.of(location1, location2));
 		handler.afterPropertiesSet();
 
-		Resource[] locations = pathResolver.getAllowedLocations();
-		assertEquals(1, locations.length);
-		assertEquals("test/", ((ClassPathResource) locations[0]).getPath());
+		assertThat(pathResolver.getAllowedLocations()).containsExactly(location1);
 	}
 
 	@Test
-	public void notModified() throws Exception {
+	void notModified() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(
 				MockServerHttpRequest.get("").ifModifiedSince(resourceLastModified("test/foo.css")));
 
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.handle(exchange).block(TIMEOUT);
-		assertEquals(HttpStatus.NOT_MODIFIED, exchange.getResponse().getStatusCode());
+		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.NOT_MODIFIED);
 	}
 
 	@Test
-	public void modified() throws Exception {
+	void modified() throws Exception {
 		long timestamp = resourceLastModified("test/foo.css") / 1000 * 1000 - 1;
 		MockServerHttpRequest request = MockServerHttpRequest.get("").ifModifiedSince(timestamp).build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.handle(exchange).block(TIMEOUT);
 
-		assertNull(exchange.getResponse().getStatusCode());
+		assertThat((Object) exchange.getResponse().getStatusCode()).isNull();
 		assertResponseBody(exchange, "h1 { color:red; }");
 	}
 
 	@Test
-	public void directory() {
+	void directory() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "js/");
 		StepVerifier.create(this.handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
-					assertThat(err, instanceOf(ResponseStatusException.class));
-					assertEquals(HttpStatus.NOT_FOUND, ((ResponseStatusException) err).getStatus());
+					assertThat(err).isInstanceOf(ResponseStatusException.class);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 	}
 
 	@Test
-	public void directoryInJarFile() {
+	void directoryInJarFile() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "underscorejs/");
 		StepVerifier.create(this.handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
-					assertThat(err, instanceOf(ResponseStatusException.class));
-					assertEquals(HttpStatus.NOT_FOUND, ((ResponseStatusException) err).getStatus());
+					assertThat(err).isInstanceOf(ResponseStatusException.class);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 	}
 
 	@Test
-	public void missingResourcePath() {
+	void missingResourcePath() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		setPathWithinHandlerMapping(exchange, "");
 		StepVerifier.create(this.handler.handle(exchange))
 				.expectErrorSatisfies(err -> {
-					assertThat(err, instanceOf(ResponseStatusException.class));
-					assertEquals(HttpStatus.NOT_FOUND, ((ResponseStatusException) err).getStatus());
+					assertThat(err).isInstanceOf(ResponseStatusException.class);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 	}
 
-	@Test(expected = IllegalArgumentException.class)
-	public void noPathWithinHandlerMappingAttribute() {
+	@Test
+	void noPathWithinHandlerMappingAttribute() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
-		this.handler.handle(exchange).block(TIMEOUT);
-	}
-
-	@Test(expected = MethodNotAllowedException.class)
-	public void unsupportedHttpMethod() {
-		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.post(""));
-		setPathWithinHandlerMapping(exchange, "foo.css");
-		this.handler.handle(exchange).block(TIMEOUT);
+		assertThatIllegalArgumentException().isThrownBy(() ->
+				this.handler.handle(exchange).block(TIMEOUT));
 	}
 
 	@Test
-	public void resourceNotFound() throws Exception {
-		for (HttpMethod method : HttpMethod.values()) {
-			resourceNotFound(method);
-		}
+	void unsupportedHttpMethod() {
+		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.post(""));
+		setPathWithinHandlerMapping(exchange, "foo.css");
+		assertThatExceptionOfType(MethodNotAllowedException.class).isThrownBy(() ->
+				this.handler.handle(exchange).block(TIMEOUT));
 	}
 
-	private void resourceNotFound(HttpMethod httpMethod) {
-		MockServerHttpRequest request = MockServerHttpRequest.method(httpMethod, "").build();
+	@ParameterizedTest
+	@MethodSource("httpMethods")
+	void resourceNotFound(HttpMethod method) throws Exception {
+		MockServerHttpRequest request = MockServerHttpRequest.method(method, "").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "not-there.css");
 		Mono<Void> mono = this.handler.handle(exchange);
 
 		StepVerifier.create(mono)
 				.expectErrorSatisfies(err -> {
-					assertThat(err, instanceOf(ResponseStatusException.class));
-					assertEquals(HttpStatus.NOT_FOUND, ((ResponseStatusException) err).getStatus());
+					assertThat(err).isInstanceOf(ResponseStatusException.class);
+					assertThat(((ResponseStatusException) err).getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
 				}).verify(TIMEOUT);
 
 		// SPR-17475
 		AtomicReference<Throwable> exceptionRef = new AtomicReference<>();
 		StepVerifier.create(mono).consumeErrorWith(exceptionRef::set).verify();
-		StepVerifier.create(mono).consumeErrorWith(ex -> assertNotSame(exceptionRef.get(), ex)).verify();
+		StepVerifier.create(mono).consumeErrorWith(ex -> assertThat(ex).isNotSameAs(exceptionRef.get())).verify();
 	}
 
 	@Test
-	public void partialContentByteRange() {
+	void partialContentByteRange() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("Range", "bytes=0-1").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
 		this.handler.handle(exchange).block(TIMEOUT);
 
-		assertEquals(HttpStatus.PARTIAL_CONTENT, exchange.getResponse().getStatusCode());
-		assertEquals(MediaType.TEXT_PLAIN, exchange.getResponse().getHeaders().getContentType());
-		assertEquals(2, exchange.getResponse().getHeaders().getContentLength());
-		assertEquals("bytes 0-1/10", exchange.getResponse().getHeaders().getFirst("Content-Range"));
-		assertEquals("bytes", exchange.getResponse().getHeaders().getFirst("Accept-Ranges"));
-		assertEquals(1, exchange.getResponse().getHeaders().get("Accept-Ranges").size());
+		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.PARTIAL_CONTENT);
+		assertThat(exchange.getResponse().getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
+		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(2);
+		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 0-1/10");
+		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "So");
 	}
 
 	@Test
-	public void partialContentByteRangeNoEnd() {
+	void partialContentByteRangeNoEnd() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=9-").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
 		this.handler.handle(exchange).block(TIMEOUT);
 
-		assertEquals(HttpStatus.PARTIAL_CONTENT, exchange.getResponse().getStatusCode());
-		assertEquals(MediaType.TEXT_PLAIN, exchange.getResponse().getHeaders().getContentType());
-		assertEquals(1, exchange.getResponse().getHeaders().getContentLength());
-		assertEquals("bytes 9-9/10", exchange.getResponse().getHeaders().getFirst("Content-Range"));
-		assertEquals("bytes", exchange.getResponse().getHeaders().getFirst("Accept-Ranges"));
-		assertEquals(1, exchange.getResponse().getHeaders().get("Accept-Ranges").size());
+		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.PARTIAL_CONTENT);
+		assertThat(exchange.getResponse().getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
+		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 9-9/10");
+		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, ".");
 	}
 
 	@Test
-	public void partialContentByteRangeLargeEnd() {
+	void partialContentByteRangeLargeEnd() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=9-10000").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
 		this.handler.handle(exchange).block(TIMEOUT);
 
-		assertEquals(HttpStatus.PARTIAL_CONTENT, exchange.getResponse().getStatusCode());
-		assertEquals(MediaType.TEXT_PLAIN, exchange.getResponse().getHeaders().getContentType());
-		assertEquals(1, exchange.getResponse().getHeaders().getContentLength());
-		assertEquals("bytes 9-9/10", exchange.getResponse().getHeaders().getFirst("Content-Range"));
-		assertEquals("bytes", exchange.getResponse().getHeaders().getFirst("Accept-Ranges"));
-		assertEquals(1, exchange.getResponse().getHeaders().get("Accept-Ranges").size());
+		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.PARTIAL_CONTENT);
+		assertThat(exchange.getResponse().getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
+		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 9-9/10");
+		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, ".");
 	}
 
 	@Test
-	public void partialContentSuffixRange() {
+	void partialContentSuffixRange() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=-1").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
 		this.handler.handle(exchange).block(TIMEOUT);
 
-		assertEquals(HttpStatus.PARTIAL_CONTENT, exchange.getResponse().getStatusCode());
-		assertEquals(MediaType.TEXT_PLAIN, exchange.getResponse().getHeaders().getContentType());
-		assertEquals(1, exchange.getResponse().getHeaders().getContentLength());
-		assertEquals("bytes 9-9/10", exchange.getResponse().getHeaders().getFirst("Content-Range"));
-		assertEquals("bytes", exchange.getResponse().getHeaders().getFirst("Accept-Ranges"));
-		assertEquals(1, exchange.getResponse().getHeaders().get("Accept-Ranges").size());
+		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.PARTIAL_CONTENT);
+		assertThat(exchange.getResponse().getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
+		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(1);
+		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 9-9/10");
+		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, ".");
 	}
 
 	@Test
-	public void partialContentSuffixRangeLargeSuffix() {
+	void partialContentSuffixRangeLargeSuffix() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=-11").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
 		this.handler.handle(exchange).block(TIMEOUT);
 
-		assertEquals(HttpStatus.PARTIAL_CONTENT, exchange.getResponse().getStatusCode());
-		assertEquals(MediaType.TEXT_PLAIN, exchange.getResponse().getHeaders().getContentType());
-		assertEquals(10, exchange.getResponse().getHeaders().getContentLength());
-		assertEquals("bytes 0-9/10", exchange.getResponse().getHeaders().getFirst("Content-Range"));
-		assertEquals("bytes", exchange.getResponse().getHeaders().getFirst("Accept-Ranges"));
-		assertEquals(1, exchange.getResponse().getHeaders().get("Accept-Ranges").size());
+		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.PARTIAL_CONTENT);
+		assertThat(exchange.getResponse().getHeaders().getContentType()).isEqualTo(MediaType.TEXT_PLAIN);
+		assertThat(exchange.getResponse().getHeaders().getContentLength()).isEqualTo(10);
+		assertThat(exchange.getResponse().getHeaders().getFirst("Content-Range")).isEqualTo("bytes 0-9/10");
+		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(exchange.getResponse().getHeaders().get("Accept-Ranges")).hasSize(1);
 		assertResponseBody(exchange, "Some text.");
 	}
 
 	@Test
-	public void partialContentInvalidRangeHeader() {
+	void partialContentInvalidRangeHeader() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("range", "bytes=foo bar").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
@@ -575,25 +624,25 @@ public class ResourceWebHandlerTests {
 				.expectComplete()
 				.verify();
 
-		assertEquals(HttpStatus.REQUESTED_RANGE_NOT_SATISFIABLE, exchange.getResponse().getStatusCode());
-		assertEquals("bytes", exchange.getResponse().getHeaders().getFirst("Accept-Ranges"));
+		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.REQUESTED_RANGE_NOT_SATISFIABLE);
+		assertThat(exchange.getResponse().getHeaders().getFirst("Accept-Ranges")).isEqualTo("bytes");
 	}
 
 	@Test
-	public void partialContentMultipleByteRanges() {
+	void partialContentMultipleByteRanges() {
 		MockServerHttpRequest request = MockServerHttpRequest.get("").header("Range", "bytes=0-1, 4-5, 8-9").build();
 		MockServerWebExchange exchange = MockServerWebExchange.from(request);
 		setPathWithinHandlerMapping(exchange, "foo.txt");
 		this.handler.handle(exchange).block(TIMEOUT);
 
-		assertEquals(HttpStatus.PARTIAL_CONTENT, exchange.getResponse().getStatusCode());
-		assertTrue(exchange.getResponse().getHeaders().getContentType().toString()
-				.startsWith("multipart/byteranges;boundary="));
+		assertThat(exchange.getResponse().getStatusCode()).isEqualTo(HttpStatus.PARTIAL_CONTENT);
+		assertThat(exchange.getResponse().getHeaders().getContentType().toString()
+		.startsWith("multipart/byteranges;boundary=")).isTrue();
 
 		String boundary = "--" + exchange.getResponse().getHeaders().getContentType().toString().substring(30);
 
 		Mono<DataBuffer> reduced = Flux.from(exchange.getResponse().getBody())
-				.reduce(this.bufferFactory.allocateBuffer(), (previous, current) -> {
+				.reduce(DefaultDataBufferFactory.sharedInstance.allocateBuffer(256), (previous, current) -> {
 					previous.write(current);
 					DataBufferUtils.release(current);
 					return previous;
@@ -601,36 +650,50 @@ public class ResourceWebHandlerTests {
 
 		StepVerifier.create(reduced)
 				.consumeNextWith(buf -> {
-					String content = DataBufferTestUtils.dumpString(buf, StandardCharsets.UTF_8);
+					String content = buf.toString(UTF_8);
 					String[] ranges = StringUtils.tokenizeToStringArray(content, "\r\n", false, true);
 
-					assertEquals(boundary, ranges[0]);
-					assertEquals("Content-Type: text/plain", ranges[1]);
-					assertEquals("Content-Range: bytes 0-1/10", ranges[2]);
-					assertEquals("So", ranges[3]);
+					assertThat(ranges[0]).isEqualTo(boundary);
+					assertThat(ranges[1]).isEqualTo("Content-Type: text/plain");
+					assertThat(ranges[2]).isEqualTo("Content-Range: bytes 0-1/10");
+					assertThat(ranges[3]).isEqualTo("So");
 
-					assertEquals(boundary, ranges[4]);
-					assertEquals("Content-Type: text/plain", ranges[5]);
-					assertEquals("Content-Range: bytes 4-5/10", ranges[6]);
-					assertEquals(" t", ranges[7]);
+					assertThat(ranges[4]).isEqualTo(boundary);
+					assertThat(ranges[5]).isEqualTo("Content-Type: text/plain");
+					assertThat(ranges[6]).isEqualTo("Content-Range: bytes 4-5/10");
+					assertThat(ranges[7]).isEqualTo(" t");
 
-					assertEquals(boundary, ranges[8]);
-					assertEquals("Content-Type: text/plain", ranges[9]);
-					assertEquals("Content-Range: bytes 8-9/10", ranges[10]);
-					assertEquals("t.", ranges[11]);
+					assertThat(ranges[8]).isEqualTo(boundary);
+					assertThat(ranges[9]).isEqualTo("Content-Type: text/plain");
+					assertThat(ranges[10]).isEqualTo("Content-Range: bytes 8-9/10");
+					assertThat(ranges[11]).isEqualTo("t.");
 				})
 				.expectComplete()
 				.verify();
 	}
 
 	@Test  // SPR-14005
-	public void doOverwriteExistingCacheControlHeaders() {
+	void doOverwriteExistingCacheControlHeaders() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
 		exchange.getResponse().getHeaders().setCacheControl(CacheControl.noStore().getHeaderValue());
 		setPathWithinHandlerMapping(exchange, "foo.css");
 		this.handler.handle(exchange).block(TIMEOUT);
 
-		assertEquals("max-age=3600", exchange.getResponse().getHeaders().getCacheControl());
+		assertThat(exchange.getResponse().getHeaders().getCacheControl()).isEqualTo("max-age=3600");
+	}
+
+	@Test
+	void ignoreLastModified() {
+		MockServerWebExchange exchange = MockServerWebExchange.from(MockServerHttpRequest.get(""));
+		setPathWithinHandlerMapping(exchange, "foo.css");
+		this.handler.setUseLastModified(false);
+		this.handler.handle(exchange).block(TIMEOUT);
+
+		HttpHeaders headers = exchange.getResponse().getHeaders();
+		assertThat(headers.getContentType()).isEqualTo(MediaType.parseMediaType("text/css"));
+		assertThat(headers.getContentLength()).isEqualTo(17);
+		assertThat(headers.containsKey("Last-Modified")).isFalse();
+		assertResponseBody(exchange, "h1 { color:red; }");
 	}
 
 
@@ -649,10 +712,14 @@ public class ResourceWebHandlerTests {
 
 	private void assertResponseBody(MockServerWebExchange exchange, String responseBody) {
 		StepVerifier.create(exchange.getResponse().getBody())
-				.consumeNextWith(buf -> assertEquals(responseBody,
-						DataBufferTestUtils.dumpString(buf, StandardCharsets.UTF_8)))
+				.consumeNextWith(buf -> assertThat(buf.toString(UTF_8)).isEqualTo(responseBody))
 				.expectComplete()
 				.verify();
+	}
+
+
+	static Stream<HttpMethod> httpMethods() {
+		return Arrays.stream(HttpMethod.values());
 	}
 
 }
