@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,32 +16,33 @@
 
 package org.springframework.web.servlet.mvc.method.annotation;
 
-import java.lang.reflect.Method;
+import java.beans.PropertyChangeEvent;
 import java.util.Arrays;
-import java.util.EnumSet;
+import java.util.Collections;
 import java.util.List;
-import javax.servlet.ServletException;
+import java.util.Locale;
 
-import org.junit.Before;
-import org.junit.Test;
-import org.mockito.Mockito;
+import jakarta.servlet.ServletException;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.beans.ConversionNotSupportedException;
 import org.springframework.beans.TypeMismatchException;
+import org.springframework.context.i18n.LocaleContextHolder;
+import org.springframework.context.support.StaticMessageSource;
 import org.springframework.core.MethodParameter;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.http.MediaType;
+import org.springframework.http.ProblemDetail;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
 import org.springframework.http.converter.HttpMessageNotWritableException;
-import org.springframework.http.server.ServletServerHttpRequest;
-import org.springframework.mock.web.test.MockHttpServletRequest;
-import org.springframework.mock.web.test.MockHttpServletResponse;
-import org.springframework.mock.web.test.MockServletConfig;
 import org.springframework.stereotype.Controller;
 import org.springframework.validation.BindException;
+import org.springframework.validation.MapBindingResult;
+import org.springframework.web.ErrorResponse;
 import org.springframework.web.HttpMediaTypeNotAcceptableException;
 import org.springframework.web.HttpMediaTypeNotSupportedException;
 import org.springframework.web.HttpRequestMethodNotSupportedException;
@@ -58,149 +59,201 @@ import org.springframework.web.context.request.async.AsyncRequestTimeoutExceptio
 import org.springframework.web.context.support.StaticWebApplicationContext;
 import org.springframework.web.multipart.support.MissingServletRequestPartException;
 import org.springframework.web.servlet.DispatcherServlet;
+import org.springframework.web.servlet.ModelAndView;
 import org.springframework.web.servlet.NoHandlerFoundException;
 import org.springframework.web.servlet.mvc.support.DefaultHandlerExceptionResolver;
+import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
+import org.springframework.web.testfixture.servlet.MockHttpServletResponse;
+import org.springframework.web.testfixture.servlet.MockServletConfig;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
- * Test fixture for {@link ResponseEntityExceptionHandler}.
+ * Unit tests for {@link ResponseEntityExceptionHandler}.
  *
  * @author Rossen Stoyanchev
  */
 public class ResponseEntityExceptionHandlerTests {
 
-	private ResponseEntityExceptionHandler exceptionHandlerSupport;
+	private final ResponseEntityExceptionHandler exceptionHandler = new ApplicationExceptionHandler();
 
-	private DefaultHandlerExceptionResolver defaultExceptionResolver;
+	private final DefaultHandlerExceptionResolver exceptionResolver = new DefaultHandlerExceptionResolver();
 
-	private WebRequest request;
+	private MockHttpServletRequest servletRequest = new MockHttpServletRequest("GET", "/");
 
-	private MockHttpServletRequest servletRequest;
+	private final MockHttpServletResponse servletResponse = new MockHttpServletResponse();
 
-	private MockHttpServletResponse servletResponse;
-
-
-	@Before
-	public void setup() {
-		this.servletRequest = new MockHttpServletRequest("GET", "/");
-		this.servletResponse = new MockHttpServletResponse();
-		this.request = new ServletWebRequest(this.servletRequest, this.servletResponse);
-
-		this.exceptionHandlerSupport = new ApplicationExceptionHandler();
-		this.defaultExceptionResolver = new DefaultHandlerExceptionResolver();
-	}
+	private WebRequest request = new ServletWebRequest(this.servletRequest, this.servletResponse);
 
 
+	@SuppressWarnings("unchecked")
 	@Test
 	public void supportsAllDefaultHandlerExceptionResolverExceptionTypes() throws Exception {
-		Class<ResponseEntityExceptionHandler> clazz = ResponseEntityExceptionHandler.class;
-		Method handleExceptionMethod = clazz.getMethod("handleException", Exception.class, WebRequest.class);
-		ExceptionHandler annotation = handleExceptionMethod.getAnnotation(ExceptionHandler.class);
-		List<Class<?>> exceptionTypes = Arrays.asList(annotation.value());
 
-		for (Method method : DefaultHandlerExceptionResolver.class.getDeclaredMethods()) {
-			Class<?>[] paramTypes = method.getParameterTypes();
-			if (method.getName().startsWith("handle") && (paramTypes.length == 4)) {
-				String name = paramTypes[0].getSimpleName();
-				assertTrue("@ExceptionHandler is missing " + name, exceptionTypes.contains(paramTypes[0]));
-			}
-		}
+		ExceptionHandler annotation = ResponseEntityExceptionHandler.class
+				.getMethod("handleException", Exception.class, WebRequest.class)
+				.getAnnotation(ExceptionHandler.class);
+
+		Arrays.stream(DefaultHandlerExceptionResolver.class.getDeclaredMethods())
+				.filter(method -> method.getName().startsWith("handle") && (method.getParameterCount() == 4))
+				.filter(method -> !method.getName().equals("handleErrorResponse"))
+				.map(method -> method.getParameterTypes()[0])
+				.forEach(exceptionType -> assertThat(annotation.value())
+						.as("@ExceptionHandler is missing declaration for " + exceptionType.getName())
+						.contains((Class<Exception>) exceptionType));
 	}
 
 	@Test
 	public void httpRequestMethodNotSupported() {
-		List<String> supported = Arrays.asList("POST", "DELETE");
-		Exception ex = new HttpRequestMethodNotSupportedException("GET", supported);
+		ResponseEntity<Object> entity =
+				testException(new HttpRequestMethodNotSupportedException("GET", List.of("POST", "DELETE")));
 
-		ResponseEntity<Object> responseEntity = testException(ex);
-		assertEquals(EnumSet.of(HttpMethod.POST, HttpMethod.DELETE), responseEntity.getHeaders().getAllow());
+		assertThat(entity.getHeaders().getFirst(HttpHeaders.ALLOW)).isEqualTo("POST, DELETE");
 	}
 
 	@Test
-	public void handleHttpMediaTypeNotSupported() {
-		List<MediaType> acceptable = Arrays.asList(MediaType.APPLICATION_ATOM_XML, MediaType.APPLICATION_XML);
-		Exception ex = new HttpMediaTypeNotSupportedException(MediaType.APPLICATION_JSON, acceptable);
+	public void httpMediaTypeNotSupported() {
+		ResponseEntity<Object> entity = testException(new HttpMediaTypeNotSupportedException(
+				MediaType.APPLICATION_JSON, List.of(MediaType.APPLICATION_ATOM_XML, MediaType.APPLICATION_XML)));
 
-		ResponseEntity<Object> responseEntity = testException(ex);
-		assertEquals(acceptable, responseEntity.getHeaders().getAccept());
+		assertThat(entity.getHeaders().getFirst(HttpHeaders.ACCEPT)).isEqualTo("application/atom+xml, application/xml");
+		assertThat(entity.getHeaders().getAcceptPatch()).isEmpty();
+	}
+
+	@Test
+	public void patchHttpMediaTypeNotSupported() {
+		this.servletRequest = new MockHttpServletRequest("PATCH", "/");
+		this.request = new ServletWebRequest(this.servletRequest, this.servletResponse);
+
+		ResponseEntity<Object> entity = testException(
+				new HttpMediaTypeNotSupportedException(
+						MediaType.APPLICATION_JSON,
+						List.of(MediaType.APPLICATION_ATOM_XML, MediaType.APPLICATION_XML),
+						HttpMethod.PATCH));
+
+		HttpHeaders headers = entity.getHeaders();
+		assertThat(headers.getFirst(HttpHeaders.ACCEPT)).isEqualTo("application/atom+xml, application/xml");
+		assertThat(headers.getFirst(HttpHeaders.ACCEPT)).isEqualTo("application/atom+xml, application/xml");
+		assertThat(headers.getFirst(HttpHeaders.ACCEPT_PATCH)).isEqualTo("application/atom+xml, application/xml");
 	}
 
 	@Test
 	public void httpMediaTypeNotAcceptable() {
-		Exception ex = new HttpMediaTypeNotAcceptableException("");
-		testException(ex);
+		testException(new HttpMediaTypeNotAcceptableException(""));
 	}
 
 	@Test
 	public void missingPathVariable() throws NoSuchMethodException {
-		Method method = getClass().getDeclaredMethod("handle", String.class);
-		MethodParameter parameter = new MethodParameter(method, 0);
-		Exception ex = new MissingPathVariableException("param", parameter);
-		testException(ex);
+		testException(new MissingPathVariableException("param",
+				new MethodParameter(getClass().getDeclaredMethod("handle", String.class), 0)));
 	}
 
 	@Test
 	public void missingServletRequestParameter() {
-		Exception ex = new MissingServletRequestParameterException("param", "type");
-		testException(ex);
+		testException(new MissingServletRequestParameterException("param", "type"));
 	}
 
 	@Test
 	public void servletRequestBindingException() {
-		Exception ex = new ServletRequestBindingException("message");
-		testException(ex);
+		testException(new ServletRequestBindingException("message"));
+	}
+
+	@Test
+	public void errorResponseProblemDetailViaMessageSource() {
+
+		Locale locale = Locale.UK;
+		LocaleContextHolder.setLocale(locale);
+
+		try {
+			StaticMessageSource messageSource = new StaticMessageSource();
+			messageSource.addMessage(
+					ErrorResponse.getDefaultDetailMessageCode(HttpMediaTypeNotSupportedException.class, null), locale,
+					"Content-Type {0} not supported. Supported: {1}");
+			messageSource.addMessage(
+					ErrorResponse.getDefaultTitleMessageCode(HttpMediaTypeNotSupportedException.class), locale,
+					"Media type is not valid or not supported");
+
+			this.exceptionHandler.setMessageSource(messageSource);
+
+			ResponseEntity<?> entity = testException(new HttpMediaTypeNotSupportedException(
+					MediaType.APPLICATION_JSON, List.of(MediaType.APPLICATION_ATOM_XML, MediaType.APPLICATION_XML)));
+
+			ProblemDetail body = (ProblemDetail) entity.getBody();
+			assertThat(body.getDetail()).isEqualTo(
+					"Content-Type application/json not supported. Supported: [application/atom+xml, application/xml]");
+			assertThat(body.getTitle()).isEqualTo(
+					"Media type is not valid or not supported");
+		}
+		finally {
+			LocaleContextHolder.resetLocaleContext();
+		}
 	}
 
 	@Test
 	public void conversionNotSupported() {
-		Exception ex = new ConversionNotSupportedException(new Object(), Object.class, null);
-		testException(ex);
+		testException(new ConversionNotSupportedException(new Object(), Object.class, null));
 	}
 
 	@Test
 	public void typeMismatch() {
-		Exception ex = new TypeMismatchException("foo", String.class);
-		testException(ex);
+		testException(new TypeMismatchException("foo", String.class));
 	}
 
 	@Test
+	public void typeMismatchWithProblemDetailViaMessageSource() {
+		Locale locale = Locale.UK;
+		LocaleContextHolder.setLocale(locale);
+
+		try {
+			StaticMessageSource messageSource = new StaticMessageSource();
+			messageSource.addMessage(
+					ErrorResponse.getDefaultDetailMessageCode(TypeMismatchException.class, null), locale,
+					"Failed to set {0} to value: {1}");
+
+			this.exceptionHandler.setMessageSource(messageSource);
+
+			ResponseEntity<?> entity = testException(
+					new TypeMismatchException(new PropertyChangeEvent(this, "name", "John", "James"), String.class));
+
+			ProblemDetail body = (ProblemDetail) entity.getBody();
+			assertThat(body.getDetail()).isEqualTo("Failed to set name to value: James");
+		}
+		finally {
+			LocaleContextHolder.resetLocaleContext();
+		}
+	}
+
+	@Test
+	@SuppressWarnings("deprecation")
 	public void httpMessageNotReadable() {
-		Exception ex = new HttpMessageNotReadableException("message");
-		testException(ex);
+		testException(new HttpMessageNotReadableException("message"));
 	}
 
 	@Test
 	public void httpMessageNotWritable() {
-		Exception ex = new HttpMessageNotWritableException("");
-		testException(ex);
+		testException(new HttpMessageNotWritableException(""));
 	}
 
 	@Test
-	public void methodArgumentNotValid() {
-		Exception ex = Mockito.mock(MethodArgumentNotValidException.class);
-		testException(ex);
+	public void methodArgumentNotValid() throws Exception {
+		testException(new MethodArgumentNotValidException(
+				new MethodParameter(getClass().getDeclaredMethod("handle", String.class), 0),
+				new MapBindingResult(Collections.emptyMap(), "name")));
 	}
 
 	@Test
 	public void missingServletRequestPart() {
-		Exception ex = new MissingServletRequestPartException("partName");
-		testException(ex);
+		testException(new MissingServletRequestPartException("partName"));
 	}
 
 	@Test
 	public void bindException() {
-		Exception ex = new BindException(new Object(), "name");
-		testException(ex);
+		testException(new BindException(new Object(), "name"));
 	}
 
 	@Test
 	public void noHandlerFoundException() {
-		ServletServerHttpRequest req = new ServletServerHttpRequest(
-				new MockHttpServletRequest("GET","/resource"));
-		Exception ex = new NoHandlerFoundException(req.getMethod().toString(),
-				req.getServletRequest().getRequestURI(),req.getHeaders());
-		testException(ex);
+		testException(new NoHandlerFoundException("GET", "/resource", HttpHeaders.EMPTY));
 	}
 
 	@Test
@@ -219,11 +272,11 @@ public class ResponseEntityExceptionHandlerTests {
 		resolver.afterPropertiesSet();
 
 		ServletRequestBindingException ex = new ServletRequestBindingException("message");
-		assertNotNull(resolver.resolveException(this.servletRequest, this.servletResponse, null, ex));
+		assertThat(resolver.resolveException(this.servletRequest, this.servletResponse, null, ex)).isNotNull();
 
-		assertEquals(400, this.servletResponse.getStatus());
-		assertEquals("error content", this.servletResponse.getContentAsString());
-		assertEquals("someHeaderValue", this.servletResponse.getHeader("someHeader"));
+		assertThat(this.servletResponse.getStatus()).isEqualTo(400);
+		assertThat(this.servletResponse.getContentAsString()).isEqualTo("error content");
+		assertThat(this.servletResponse.getHeader("someHeader")).isEqualTo("someHeaderValue");
 	}
 
 	@Test
@@ -236,8 +289,11 @@ public class ResponseEntityExceptionHandlerTests {
 		resolver.setApplicationContext(ctx);
 		resolver.afterPropertiesSet();
 
-		IllegalStateException ex = new IllegalStateException(new ServletRequestBindingException("message"));
-		assertNull(resolver.resolveException(this.servletRequest, this.servletResponse, null, ex));
+		ModelAndView mav = resolver.resolveException(
+				this.servletRequest, this.servletResponse, null,
+				new IllegalStateException(new ServletRequestBindingException("message")));
+
+		assertThat(mav).isNull();
 	}
 
 	@Test
@@ -251,9 +307,9 @@ public class ResponseEntityExceptionHandlerTests {
 		servlet.init(new MockServletConfig());
 		servlet.service(this.servletRequest, this.servletResponse);
 
-		assertEquals(400, this.servletResponse.getStatus());
-		assertEquals("error content", this.servletResponse.getContentAsString());
-		assertEquals("someHeaderValue", this.servletResponse.getHeader("someHeader"));
+		assertThat(this.servletResponse.getStatus()).isEqualTo(400);
+		assertThat(this.servletResponse.getContentAsString()).isEqualTo("error content");
+		assertThat(this.servletResponse.getHeader("someHeader")).isEqualTo("someHeaderValue");
 	}
 
 	@Test
@@ -269,26 +325,28 @@ public class ResponseEntityExceptionHandlerTests {
 			servlet.service(this.servletRequest, this.servletResponse);
 		}
 		catch (ServletException ex) {
-			assertTrue(ex.getCause() instanceof IllegalStateException);
-			assertTrue(ex.getCause().getCause() instanceof ServletRequestBindingException);
+			boolean condition1 = ex.getCause() instanceof IllegalStateException;
+			assertThat(condition1).isTrue();
+			boolean condition = ex.getCause().getCause() instanceof ServletRequestBindingException;
+			assertThat(condition).isTrue();
 		}
 	}
 
 
 	private ResponseEntity<Object> testException(Exception ex) {
 		try {
-			ResponseEntity<Object> responseEntity = this.exceptionHandlerSupport.handleException(ex, this.request);
+			ResponseEntity<Object> entity = this.exceptionHandler.handleException(ex, this.request);
 
 			// SPR-9653
-			if (HttpStatus.INTERNAL_SERVER_ERROR.equals(responseEntity.getStatusCode())) {
-				assertSame(ex, this.servletRequest.getAttribute("javax.servlet.error.exception"));
+			if (HttpStatus.INTERNAL_SERVER_ERROR.equals(entity.getStatusCode())) {
+				assertThat(this.servletRequest.getAttribute("jakarta.servlet.error.exception")).isSameAs(ex);
 			}
 
-			this.defaultExceptionResolver.resolveException(this.servletRequest, this.servletResponse, null, ex);
+			// Verify DefaultHandlerExceptionResolver would set the same status
+			this.exceptionResolver.resolveException(this.servletRequest, this.servletResponse, null, ex);
+			assertThat(entity.getStatusCode().value()).isEqualTo(this.servletResponse.getStatus());
 
-			assertEquals(this.servletResponse.getStatus(), responseEntity.getStatusCode().value());
-
-			return responseEntity;
+			return entity;
 		}
 		catch (Exception ex2) {
 			throw new IllegalStateException("handleException threw exception", ex2);
@@ -321,8 +379,9 @@ public class ResponseEntityExceptionHandlerTests {
 
 		@Override
 		protected ResponseEntity<Object> handleServletRequestBindingException(
-				ServletRequestBindingException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
+				ServletRequestBindingException ex, HttpHeaders headers, HttpStatusCode status, WebRequest request) {
 
+			headers = new HttpHeaders();
 			headers.set("someHeader", "someHeaderValue");
 			return handleExceptionInternal(ex, "error content", headers, status, request);
 		}
