@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,33 +17,37 @@
 package org.springframework.web.servlet.resource;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import javax.servlet.http.HttpServletResponse;
 
-import org.hamcrest.Matchers;
-import org.junit.Before;
-import org.junit.Test;
+import jakarta.servlet.http.HttpServletResponse;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
 import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
-import org.springframework.mock.web.test.MockHttpServletRequest;
-import org.springframework.mock.web.test.MockHttpServletResponse;
-import org.springframework.mock.web.test.MockServletContext;
 import org.springframework.util.StringUtils;
 import org.springframework.web.HttpRequestMethodNotSupportedException;
 import org.springframework.web.accept.ContentNegotiationManager;
 import org.springframework.web.accept.ContentNegotiationManagerFactoryBean;
+import org.springframework.web.context.support.StaticWebApplicationContext;
 import org.springframework.web.servlet.HandlerMapping;
+import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
+import org.springframework.web.testfixture.servlet.MockHttpServletResponse;
+import org.springframework.web.testfixture.servlet.MockServletContext;
 
-import static org.junit.Assert.*;
-import static org.mockito.Mockito.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
+import static org.assertj.core.api.Assertions.fail;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.mock;
 
 /**
  * Unit tests for {@link ResourceHttpRequestHandler}.
@@ -52,8 +56,14 @@ import static org.mockito.Mockito.*;
  * @author Jeremy Grelle
  * @author Rossen Stoyanchev
  * @author Brian Clozel
+ * @author Sam Brannen
  */
-public class ResourceHttpRequestHandlerTests {
+@ExtendWith(GzipSupport.class)
+class ResourceHttpRequestHandlerTests {
+
+	private final ClassPathResource testResource = new ClassPathResource("test/", getClass());
+	private final ClassPathResource testAlternatePathResource = new ClassPathResource("testalternatepath/", getClass());
+	private final ClassPathResource webjarsResource = new ClassPathResource("META-INF/resources/webjars/");
 
 	private ResourceHttpRequestHandler handler;
 
@@ -62,97 +72,99 @@ public class ResourceHttpRequestHandlerTests {
 	private MockHttpServletResponse response;
 
 
-	@Before
-	public void setup() throws Exception {
-		List<Resource> paths = new ArrayList<>(2);
-		paths.add(new ClassPathResource("test/", getClass()));
-		paths.add(new ClassPathResource("testalternatepath/", getClass()));
-		paths.add(new ClassPathResource("META-INF/resources/webjars/"));
+	@BeforeEach
+	void setup() throws Exception {
+		List<Resource> locations = List.of(
+				this.testResource,
+				this.testAlternatePathResource,
+				this.webjarsResource);
+
+		TestServletContext servletContext = new TestServletContext();
 
 		this.handler = new ResourceHttpRequestHandler();
-		this.handler.setLocations(paths);
+		this.handler.setLocations(locations);
 		this.handler.setCacheSeconds(3600);
-		this.handler.setServletContext(new TestServletContext());
+		this.handler.setServletContext(servletContext);
 		this.handler.afterPropertiesSet();
 
-		this.request = new MockHttpServletRequest("GET", "");
+		this.request = new MockHttpServletRequest(servletContext, "GET", "");
 		this.response = new MockHttpServletResponse();
 	}
 
 
 	@Test
-	public void getResource() throws Exception {
+	void getResource() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals("text/css", this.response.getContentType());
-		assertEquals(17, this.response.getContentLength());
-		assertEquals("max-age=3600", this.response.getHeader("Cache-Control"));
-		assertTrue(this.response.containsHeader("Last-Modified"));
-		assertEquals(resourceLastModified("test/foo.css") / 1000, this.response.getDateHeader("Last-Modified") / 1000);
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
-		assertEquals("h1 { color:red; }", this.response.getContentAsString());
+		assertThat(this.response.getContentType()).isEqualTo("text/css");
+		assertThat(this.response.getContentLength()).isEqualTo(17);
+		assertThat(this.response.getHeader("Cache-Control")).isEqualTo("max-age=3600");
+		assertThat(this.response.containsHeader("Last-Modified")).isTrue();
+		assertThat(this.response.getDateHeader("Last-Modified") / 1000).isEqualTo(resourceLastModified("test/foo.css") / 1000);
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
+		assertThat(this.response.getContentAsString()).isEqualTo("h1 { color:red; }");
 	}
 
 	@Test
-	public void getResourceHttpHeader() throws Exception {
+	void getResourceHttpHeader() throws Exception {
 		this.request.setMethod("HEAD");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals(200, this.response.getStatus());
-		assertEquals("text/css", this.response.getContentType());
-		assertEquals(17, this.response.getContentLength());
-		assertEquals("max-age=3600", this.response.getHeader("Cache-Control"));
-		assertTrue(this.response.containsHeader("Last-Modified"));
-		assertEquals(resourceLastModified("test/foo.css") / 1000, this.response.getDateHeader("Last-Modified") / 1000);
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
-		assertEquals(0, this.response.getContentAsByteArray().length);
+		assertThat(this.response.getStatus()).isEqualTo(200);
+		assertThat(this.response.getContentType()).isEqualTo("text/css");
+		assertThat(this.response.getContentLength()).isEqualTo(17);
+		assertThat(this.response.getHeader("Cache-Control")).isEqualTo("max-age=3600");
+		assertThat(this.response.containsHeader("Last-Modified")).isTrue();
+		assertThat(this.response.getDateHeader("Last-Modified") / 1000).isEqualTo(resourceLastModified("test/foo.css") / 1000);
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
+		assertThat(this.response.getContentAsByteArray()).isEmpty();
 	}
 
 	@Test
-	public void getResourceHttpOptions() throws Exception {
+	void getResourceHttpOptions() throws Exception {
 		this.request.setMethod("OPTIONS");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals(200, this.response.getStatus());
-		assertEquals("GET,HEAD,OPTIONS", this.response.getHeader("Allow"));
+		assertThat(this.response.getStatus()).isEqualTo(200);
+		assertThat(this.response.getHeader("Allow")).isEqualTo("GET,HEAD,OPTIONS");
 	}
 
 	@Test
-	public void getResourceNoCache() throws Exception {
+	void getResourceNoCache() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.handler.setCacheSeconds(0);
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals("no-store", this.response.getHeader("Cache-Control"));
-		assertTrue(this.response.containsHeader("Last-Modified"));
-		assertEquals(resourceLastModified("test/foo.css") / 1000, this.response.getDateHeader("Last-Modified") / 1000);
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
+		assertThat(this.response.getHeader("Cache-Control")).isEqualTo("no-store");
+		assertThat(this.response.containsHeader("Last-Modified")).isTrue();
+		assertThat(this.response.getDateHeader("Last-Modified") / 1000).isEqualTo(resourceLastModified("test/foo.css") / 1000);
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getVersionedResource() throws Exception {
+	void getVersionedResource() throws Exception {
 		VersionResourceResolver versionResolver = new VersionResourceResolver()
 				.addFixedVersionStrategy("versionString", "/**");
-		this.handler.setResourceResolvers(Arrays.asList(versionResolver, new PathResourceResolver()));
+		this.handler.setResourceResolvers(List.of(versionResolver, new PathResourceResolver()));
 		this.handler.afterPropertiesSet();
 
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "versionString/foo.css");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals("\"versionString\"", this.response.getHeader("ETag"));
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
+		assertThat(this.response.getHeader("ETag")).isEqualTo("W/\"versionString\"");
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
 	@SuppressWarnings("deprecation")
-	public void getResourceHttp10BehaviorCache() throws Exception {
+	void getResourceHttp10BehaviorCache() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.handler.setCacheSeconds(3600);
 		this.handler.setUseExpiresHeader(true);
@@ -160,17 +172,17 @@ public class ResourceHttpRequestHandlerTests {
 		this.handler.setAlwaysMustRevalidate(true);
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals("max-age=3600, must-revalidate", this.response.getHeader("Cache-Control"));
-		assertTrue(this.response.getDateHeader("Expires") >= System.currentTimeMillis() - 1000 + (3600 * 1000));
-		assertTrue(this.response.containsHeader("Last-Modified"));
-		assertEquals(resourceLastModified("test/foo.css") / 1000, this.response.getDateHeader("Last-Modified") / 1000);
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
+		assertThat(this.response.getHeader("Cache-Control")).isEqualTo("max-age=3600, must-revalidate");
+		assertThat(this.response.getDateHeader("Expires") >= System.currentTimeMillis() - 1000 + (3600 * 1000)).isTrue();
+		assertThat(this.response.containsHeader("Last-Modified")).isTrue();
+		assertThat(this.response.getDateHeader("Last-Modified") / 1000).isEqualTo(resourceLastModified("test/foo.css") / 1000);
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
 	@SuppressWarnings("deprecation")
-	public void getResourceHttp10BehaviorNoCache() throws Exception {
+	void getResourceHttp10BehaviorNoCache() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.handler.setCacheSeconds(0);
 		this.handler.setUseExpiresHeader(true);
@@ -178,71 +190,71 @@ public class ResourceHttpRequestHandlerTests {
 		this.handler.setUseCacheControlHeader(true);
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals("no-cache", this.response.getHeader("Pragma"));
-		assertThat(this.response.getHeaderValues("Cache-Control"), Matchers.iterableWithSize(1));
-		assertEquals("no-cache", this.response.getHeader("Cache-Control"));
-		assertTrue(this.response.getDateHeader("Expires") <= System.currentTimeMillis());
-		assertTrue(this.response.containsHeader("Last-Modified"));
-		assertEquals(resourceLastModified("test/foo.css") / 1000, this.response.getDateHeader("Last-Modified") / 1000);
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
+		assertThat(this.response.getHeader("Pragma")).isEqualTo("no-cache");
+		assertThat(this.response.getHeaderValues("Cache-Control")).hasSize(1);
+		assertThat(this.response.getHeader("Cache-Control")).isEqualTo("no-cache");
+		assertThat(this.response.getDateHeader("Expires") <= System.currentTimeMillis()).isTrue();
+		assertThat(this.response.containsHeader("Last-Modified")).isTrue();
+		assertThat(this.response.getDateHeader("Last-Modified") / 1000).isEqualTo(resourceLastModified("test/foo.css") / 1000);
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getResourceWithHtmlMediaType() throws Exception {
+	void getResourceWithHtmlMediaType() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.html");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals("text/html", this.response.getContentType());
-		assertEquals("max-age=3600", this.response.getHeader("Cache-Control"));
-		assertTrue(this.response.containsHeader("Last-Modified"));
-		assertEquals(resourceLastModified("test/foo.html") / 1000, this.response.getDateHeader("Last-Modified") / 1000);
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
+		assertThat(this.response.getContentType()).isEqualTo("text/html");
+		assertThat(this.response.getHeader("Cache-Control")).isEqualTo("max-age=3600");
+		assertThat(this.response.containsHeader("Last-Modified")).isTrue();
+		assertThat(this.response.getDateHeader("Last-Modified") / 1000).isEqualTo(resourceLastModified("test/foo.html") / 1000);
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void getResourceFromAlternatePath() throws Exception {
+	void getResourceFromAlternatePath() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "baz.css");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals("text/css", this.response.getContentType());
-		assertEquals(17, this.response.getContentLength());
-		assertEquals("max-age=3600", this.response.getHeader("Cache-Control"));
-		assertTrue(this.response.containsHeader("Last-Modified"));
-		assertEquals(resourceLastModified("testalternatepath/baz.css") / 1000,
-				this.response.getDateHeader("Last-Modified") / 1000);
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
-		assertEquals("h1 { color:red; }", this.response.getContentAsString());
+		assertThat(this.response.getContentType()).isEqualTo("text/css");
+		assertThat(this.response.getContentLength()).isEqualTo(17);
+		assertThat(this.response.getHeader("Cache-Control")).isEqualTo("max-age=3600");
+		assertThat(this.response.containsHeader("Last-Modified")).isTrue();
+		assertThat(this.response.getDateHeader("Last-Modified") / 1000).isEqualTo(resourceLastModified("testalternatepath/baz.css") / 1000);
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
+		assertThat(this.response.getContentAsString()).isEqualTo("h1 { color:red; }");
 	}
 
 	@Test
-	public void getResourceFromSubDirectory() throws Exception {
+	void getResourceFromSubDirectory() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "js/foo.js");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals("text/javascript", this.response.getContentType());
-		assertEquals("function foo() { console.log(\"hello world\"); }", this.response.getContentAsString());
+		assertThat(this.response.getContentType()).isEqualTo("text/javascript");
+		assertThat(this.response.getContentAsString()).isEqualTo("function foo() { console.log(\"hello world\"); }");
 	}
 
 	@Test
-	public void getResourceFromSubDirectoryOfAlternatePath() throws Exception {
+	void getResourceFromSubDirectoryOfAlternatePath() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "js/baz.js");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals("text/javascript", this.response.getContentType());
-		assertEquals("function foo() { console.log(\"hello world\"); }", this.response.getContentAsString());
+		assertThat(this.response.getContentType()).isEqualTo("text/javascript");
+		assertThat(this.response.getContentAsString()).isEqualTo("function foo() { console.log(\"hello world\"); }");
 	}
 
 	@Test  // SPR-13658
-	public void getResourceWithRegisteredMediaType() throws Exception {
+	@SuppressWarnings("deprecation")
+	void getResourceWithRegisteredMediaType() throws Exception {
 		ContentNegotiationManagerFactoryBean factory = new ContentNegotiationManagerFactoryBean();
 		factory.addMediaType("bar", new MediaType("foo", "bar"));
 		factory.afterPropertiesSet();
 		ContentNegotiationManager manager = factory.getObject();
 
-		List<Resource> paths = Collections.singletonList(new ClassPathResource("test/", getClass()));
+		List<Resource> paths = List.of(new ClassPathResource("test/", getClass()));
 		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
 		handler.setServletContext(new MockServletContext());
 		handler.setLocations(paths);
@@ -252,18 +264,19 @@ public class ResourceHttpRequestHandlerTests {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.bar");
 		handler.handleRequest(this.request, this.response);
 
-		assertEquals("foo/bar", this.response.getContentType());
-		assertEquals("h1 { color:red; }", this.response.getContentAsString());
+		assertThat(this.response.getContentType()).isEqualTo("foo/bar");
+		assertThat(this.response.getContentAsString()).isEqualTo("h1 { color:red; }");
 	}
 
 	@Test  // SPR-14577
-	public void getMediaTypeWithFavorPathExtensionOff() throws Exception {
+	@SuppressWarnings("deprecation")
+	void getMediaTypeWithFavorPathExtensionOff() throws Exception {
 		ContentNegotiationManagerFactoryBean factory = new ContentNegotiationManagerFactoryBean();
 		factory.setFavorPathExtension(false);
 		factory.afterPropertiesSet();
 		ContentNegotiationManager manager = factory.getObject();
 
-		List<Resource> paths = Collections.singletonList(new ClassPathResource("test/", getClass()));
+		List<Resource> paths = List.of(new ClassPathResource("test/", getClass()));
 		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
 		handler.setServletContext(new MockServletContext());
 		handler.setLocations(paths);
@@ -274,49 +287,64 @@ public class ResourceHttpRequestHandlerTests {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.html");
 		handler.handleRequest(this.request, this.response);
 
-		assertEquals("text/html", this.response.getContentType());
+		assertThat(this.response.getContentType()).isEqualTo("text/html");
 	}
 
 	@Test  // SPR-14368
-	public void getResourceWithMediaTypeResolvedThroughServletContext() throws Exception {
+	void getResourceWithMediaTypeResolvedThroughServletContext() throws Exception {
 		MockServletContext servletContext = new MockServletContext() {
 			@Override
 			public String getMimeType(String filePath) {
 				return "foo/bar";
 			}
-			@Override
-			public String getVirtualServerName() {
-				return "";
-			}
 		};
 
-		List<Resource> paths = Collections.singletonList(new ClassPathResource("test/", getClass()));
+		List<Resource> paths = List.of(new ClassPathResource("test/", getClass()));
 		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
 		handler.setServletContext(servletContext);
 		handler.setLocations(paths);
 		handler.afterPropertiesSet();
 
-		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
-		handler.handleRequest(this.request, this.response);
+		MockHttpServletRequest request = new MockHttpServletRequest(servletContext, "GET", "");
+		request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
+		handler.handleRequest(request, this.response);
 
-		assertEquals("foo/bar", this.response.getContentType());
-		assertEquals("h1 { color:red; }", this.response.getContentAsString());
+		assertThat(this.response.getContentType()).isEqualTo("foo/bar");
+		assertThat(this.response.getContentAsString()).isEqualTo("h1 { color:red; }");
+	}
+
+	@Test  // gh-27538, gh-27624
+	void filterNonExistingLocations() throws Exception {
+		List<Resource> inputLocations = List.of(
+				new ClassPathResource("test/", getClass()),
+				new ClassPathResource("testalternatepath/", getClass()),
+				new ClassPathResource("nosuchpath/", getClass()));
+
+		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
+		handler.setServletContext(new MockServletContext());
+		handler.setLocations(inputLocations);
+		handler.setOptimizeLocations(true);
+		handler.afterPropertiesSet();
+
+		List<Resource> actual = handler.getLocations();
+		assertThat(actual).hasSize(2);
+		assertThat(actual.get(0).getURL().toString()).endsWith("test/");
+		assertThat(actual.get(1).getURL().toString()).endsWith("testalternatepath/");
 	}
 
 	@Test
-	public void testInvalidPath() throws Exception {
-
+	void testInvalidPath() throws Exception {
 		// Use mock ResourceResolver: i.e. we're only testing upfront validations...
 
 		Resource resource = mock(Resource.class);
-		when(resource.getFilename()).thenThrow(new AssertionError("Resource should not be resolved"));
-		when(resource.getInputStream()).thenThrow(new AssertionError("Resource should not be resolved"));
+		given(resource.getFilename()).willThrow(new AssertionError("Resource should not be resolved"));
+		given(resource.getInputStream()).willThrow(new AssertionError("Resource should not be resolved"));
 		ResourceResolver resolver = mock(ResourceResolver.class);
-		when(resolver.resolveResource(any(), any(), any(), any())).thenReturn(resource);
+		given(resolver.resolveResource(any(), any(), any(), any())).willReturn(resource);
 
 		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
-		handler.setLocations(Collections.singletonList(new ClassPathResource("test/", getClass())));
-		handler.setResourceResolvers(Collections.singletonList(resolver));
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
+		handler.setResourceResolvers(List.of(resolver));
 		handler.setServletContext(new TestServletContext());
 		handler.afterPropertiesSet();
 
@@ -325,7 +353,7 @@ public class ResourceHttpRequestHandlerTests {
 		testInvalidPath(":/../../testsecret/secret.txt", handler);
 
 		Resource location = new UrlResource(getClass().getResource("./test/"));
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 		Resource secretResource = new UrlResource(getClass().getResource("testsecret/secret.txt"));
 		String secretPath = secretResource.getURL().getPath();
 
@@ -343,11 +371,11 @@ public class ResourceHttpRequestHandlerTests {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, requestPath);
 		this.response = new MockHttpServletResponse();
 		handler.handleRequest(this.request, this.response);
-		assertEquals(HttpStatus.NOT_FOUND.value(), this.response.getStatus());
+		assertThat(this.response.getStatus()).isEqualTo(HttpStatus.NOT_FOUND.value());
 	}
 
 	@Test
-	public void resolvePathWithTraversal() throws Exception {
+	void resolvePathWithTraversal() throws Exception {
 		for (HttpMethod method : HttpMethod.values()) {
 			this.request = new MockHttpServletRequest("GET", "");
 			this.response = new MockHttpServletResponse();
@@ -359,14 +387,14 @@ public class ResourceHttpRequestHandlerTests {
 		this.request.setMethod(httpMethod.name());
 
 		Resource location = new ClassPathResource("test/", getClass());
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 
 		testResolvePathWithTraversal(location, "../testsecret/secret.txt");
 		testResolvePathWithTraversal(location, "test/../../testsecret/secret.txt");
 		testResolvePathWithTraversal(location, ":/../../testsecret/secret.txt");
 
 		location = new UrlResource(getClass().getResource("./test/"));
-		this.handler.setLocations(Collections.singletonList(location));
+		this.handler.setLocations(List.of(location));
 		Resource secretResource = new UrlResource(getClass().getResource("testsecret/secret.txt"));
 		String secretPath = secretResource.getURL().getPath();
 
@@ -388,67 +416,64 @@ public class ResourceHttpRequestHandlerTests {
 		if (!location.createRelative(requestPath).exists() && !requestPath.contains(":")) {
 			fail(requestPath + " doesn't actually exist as a relative path");
 		}
-		assertEquals(HttpStatus.NOT_FOUND.value(), this.response.getStatus());
+		assertThat(this.response.getStatus()).isEqualTo(HttpStatus.NOT_FOUND.value());
 	}
 
 	@Test
-	public void ignoreInvalidEscapeSequence() throws Exception {
+	void ignoreInvalidEscapeSequence() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "/%foo%/bar.txt");
 		this.response = new MockHttpServletResponse();
 		this.handler.handleRequest(this.request, this.response);
-		assertEquals(404, this.response.getStatus());
+		assertThat(this.response.getStatus()).isEqualTo(404);
 	}
 
 	@Test
-	public void processPath() {
+	void processPath() {
 		// Unchanged
-		assertSame("/foo/bar", this.handler.processPath("/foo/bar"));
-		assertSame("foo/bar", this.handler.processPath("foo/bar"));
+		assertThat(this.handler.processPath("/foo/bar")).isSameAs("/foo/bar");
+		assertThat(this.handler.processPath("foo/bar")).isSameAs("foo/bar");
 
 		// leading whitespace control characters (00-1F)
-		assertEquals("/foo/bar", this.handler.processPath("  /foo/bar"));
-		assertEquals("/foo/bar", this.handler.processPath((char) 1 + "/foo/bar"));
-		assertEquals("/foo/bar", this.handler.processPath((char) 31 + "/foo/bar"));
-		assertEquals("foo/bar", this.handler.processPath("  foo/bar"));
-		assertEquals("foo/bar", this.handler.processPath((char) 31 + "foo/bar"));
+		assertThat(this.handler.processPath("  /foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath((char) 1 + "/foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath((char) 31 + "/foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath("  foo/bar")).isEqualTo("foo/bar");
+		assertThat(this.handler.processPath((char) 31 + "foo/bar")).isEqualTo("foo/bar");
 
 		// leading control character 0x7F (DEL)
-		assertEquals("/foo/bar", this.handler.processPath((char) 127 + "/foo/bar"));
-		assertEquals("/foo/bar", this.handler.processPath((char) 127 + "/foo/bar"));
+		assertThat(this.handler.processPath((char) 127 + "/foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath((char) 127 + "/foo/bar")).isEqualTo("/foo/bar");
 
 		// leading control and '/' characters
-		assertEquals("/foo/bar", this.handler.processPath("  /  foo/bar"));
-		assertEquals("/foo/bar", this.handler.processPath("  /  /  foo/bar"));
-		assertEquals("/foo/bar", this.handler.processPath("  // /// ////  foo/bar"));
-		assertEquals("/foo/bar", this.handler.processPath((char) 1 + " / " + (char) 127 + " // foo/bar"));
+		assertThat(this.handler.processPath("  /  foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath("  /  /  foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath("  // /// ////  foo/bar")).isEqualTo("/foo/bar");
+		assertThat(this.handler.processPath((char) 1 + " / " + (char) 127 + " // foo/bar")).isEqualTo("/foo/bar");
 
 		// root or empty path
-		assertEquals("", this.handler.processPath("   "));
-		assertEquals("/", this.handler.processPath("/"));
-		assertEquals("/", this.handler.processPath("///"));
-		assertEquals("/", this.handler.processPath("/ /   / "));
-		assertEquals("/", this.handler.processPath("\\/ \\/   \\/ "));
+		assertThat(this.handler.processPath("   ")).isEqualTo("");
+		assertThat(this.handler.processPath("/")).isEqualTo("/");
+		assertThat(this.handler.processPath("///")).isEqualTo("/");
+		assertThat(this.handler.processPath("/ /   / ")).isEqualTo("/");
+		assertThat(this.handler.processPath("\\/ \\/   \\/ ")).isEqualTo("/");
 
 		// duplicate slash or backslash
-		assertEquals("/foo/ /bar/baz/", this.handler.processPath("//foo/ /bar//baz//"));
-		assertEquals("/foo/ /bar/baz/", this.handler.processPath("\\\\foo\\ \\bar\\\\baz\\\\"));
-		assertEquals("foo/bar", this.handler.processPath("foo\\\\/\\////bar"));
+		assertThat(this.handler.processPath("//foo/ /bar//baz//")).isEqualTo("/foo/ /bar/baz/");
+		assertThat(this.handler.processPath("\\\\foo\\ \\bar\\\\baz\\\\")).isEqualTo("/foo/ /bar/baz/");
+		assertThat(this.handler.processPath("foo\\\\/\\////bar")).isEqualTo("foo/bar");
 
 	}
 
 	@Test
-	public void initAllowedLocations() {
+	void initAllowedLocations() {
 		PathResourceResolver resolver = (PathResourceResolver) this.handler.getResourceResolvers().get(0);
 		Resource[] locations = resolver.getAllowedLocations();
 
-		assertEquals(3, locations.length);
-		assertEquals("test/", ((ClassPathResource) locations[0]).getPath());
-		assertEquals("testalternatepath/", ((ClassPathResource) locations[1]).getPath());
-		assertEquals("META-INF/resources/webjars/", ((ClassPathResource) locations[2]).getPath());
+		assertThat(locations).containsExactly(this.testResource, this.testAlternatePathResource, this.webjarsResource);
 	}
 
 	@Test
-	public void initAllowedLocationsWithExplicitConfiguration() throws Exception {
+	void initAllowedLocationsWithExplicitConfiguration() throws Exception {
 		ClassPathResource location1 = new ClassPathResource("test/", getClass());
 		ClassPathResource location2 = new ClassPathResource("testalternatepath/", getClass());
 
@@ -456,68 +481,68 @@ public class ResourceHttpRequestHandlerTests {
 		pathResolver.setAllowedLocations(location1);
 
 		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
-		handler.setResourceResolvers(Collections.singletonList(pathResolver));
+		handler.setResourceResolvers(List.of(pathResolver));
 		handler.setServletContext(new MockServletContext());
-		handler.setLocations(Arrays.asList(location1, location2));
+		handler.setLocations(List.of(location1, location2));
 		handler.afterPropertiesSet();
 
-		Resource[] locations = pathResolver.getAllowedLocations();
-		assertEquals(1, locations.length);
-		assertEquals("test/", ((ClassPathResource) locations[0]).getPath());
+		assertThat(pathResolver.getAllowedLocations()).containsExactly(location1);
 	}
 
 	@Test
-	public void notModified() throws Exception {
+	void notModified() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.request.addHeader("If-Modified-Since", resourceLastModified("test/foo.css"));
 		this.handler.handleRequest(this.request, this.response);
-		assertEquals(HttpServletResponse.SC_NOT_MODIFIED, this.response.getStatus());
+		assertThat(this.response.getStatus()).isEqualTo(HttpServletResponse.SC_NOT_MODIFIED);
 	}
 
 	@Test
-	public void modified() throws Exception {
+	void modified() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.request.addHeader("If-Modified-Since", resourceLastModified("test/foo.css") / 1000 * 1000 - 1);
 		this.handler.handleRequest(this.request, this.response);
-		assertEquals(HttpServletResponse.SC_OK, this.response.getStatus());
-		assertEquals("h1 { color:red; }", this.response.getContentAsString());
+		assertThat(this.response.getStatus()).isEqualTo(HttpServletResponse.SC_OK);
+		assertThat(this.response.getContentAsString()).isEqualTo("h1 { color:red; }");
 	}
 
 	@Test
-	public void directory() throws Exception {
+	void directory() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "js/");
 		this.handler.handleRequest(this.request, this.response);
-		assertEquals(404, this.response.getStatus());
+		assertThat(this.response.getStatus()).isEqualTo(404);
 	}
 
 	@Test
-	public void directoryInJarFile() throws Exception {
+	void directoryInJarFile() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "underscorejs/");
 		this.handler.handleRequest(this.request, this.response);
-		assertEquals(404, this.response.getStatus());
+		assertThat(this.response.getStatus()).isEqualTo(404);
 	}
 
 	@Test
-	public void missingResourcePath() throws Exception {
+	void missingResourcePath() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "");
 		this.handler.handleRequest(this.request, this.response);
-		assertEquals(404, this.response.getStatus());
-	}
-
-	@Test(expected = IllegalStateException.class)
-	public void noPathWithinHandlerMappingAttribute() throws Exception {
-		this.handler.handleRequest(this.request, this.response);
-	}
-
-	@Test(expected = HttpRequestMethodNotSupportedException.class)
-	public void unsupportedHttpMethod() throws Exception {
-		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
-		this.request.setMethod("POST");
-		this.handler.handleRequest(this.request, this.response);
+		assertThat(this.response.getStatus()).isEqualTo(404);
 	}
 
 	@Test
-	public void resourceNotFound() throws Exception {
+	void noPathWithinHandlerMappingAttribute() throws Exception {
+		assertThatIllegalStateException().isThrownBy(() ->
+				this.handler.handleRequest(this.request, this.response));
+	}
+
+	@Test
+	void unsupportedHttpMethod() throws Exception {
+		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
+		this.request.setMethod("POST");
+		assertThatExceptionOfType(HttpRequestMethodNotSupportedException.class).isThrownBy(() ->
+				this.handler.handleRequest(this.request, this.response));
+	}
+
+	@Test
+	void resourceNotFound() throws Exception {
 		for (HttpMethod method : HttpMethod.values()) {
 			this.request = new MockHttpServletRequest("GET", "");
 			this.response = new MockHttpServletResponse();
@@ -529,134 +554,208 @@ public class ResourceHttpRequestHandlerTests {
 		this.request.setMethod(httpMethod.name());
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "not-there.css");
 		this.handler.handleRequest(this.request, this.response);
-		assertEquals(HttpStatus.NOT_FOUND.value(), this.response.getStatus());
+		assertThat(this.response.getStatus()).isEqualTo(HttpStatus.NOT_FOUND.value());
 	}
 
 	@Test
-	public void partialContentByteRange() throws Exception {
+	void partialContentByteRange() throws Exception {
 		this.request.addHeader("Range", "bytes=0-1");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals(206, this.response.getStatus());
-		assertEquals("text/plain", this.response.getContentType());
-		assertEquals(2, this.response.getContentLength());
-		assertEquals("bytes 0-1/10", this.response.getHeader("Content-Range"));
-		assertEquals("So", this.response.getContentAsString());
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
+		assertThat(this.response.getStatus()).isEqualTo(206);
+		assertThat(this.response.getContentType()).isEqualTo("text/plain");
+		assertThat(this.response.getContentLength()).isEqualTo(2);
+		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes 0-1/10");
+		assertThat(this.response.getContentAsString()).isEqualTo("So");
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void partialContentByteRangeNoEnd() throws Exception {
+	void partialContentByteRangeNoEnd() throws Exception {
 		this.request.addHeader("Range", "bytes=9-");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals(206, this.response.getStatus());
-		assertEquals("text/plain", this.response.getContentType());
-		assertEquals(1, this.response.getContentLength());
-		assertEquals("bytes 9-9/10", this.response.getHeader("Content-Range"));
-		assertEquals(".", this.response.getContentAsString());
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
+		assertThat(this.response.getStatus()).isEqualTo(206);
+		assertThat(this.response.getContentType()).isEqualTo("text/plain");
+		assertThat(this.response.getContentLength()).isEqualTo(1);
+		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes 9-9/10");
+		assertThat(this.response.getContentAsString()).isEqualTo(".");
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void partialContentByteRangeLargeEnd() throws Exception {
+	void partialContentByteRangeLargeEnd() throws Exception {
 		this.request.addHeader("Range", "bytes=9-10000");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals(206, this.response.getStatus());
-		assertEquals("text/plain", this.response.getContentType());
-		assertEquals(1, this.response.getContentLength());
-		assertEquals("bytes 9-9/10", this.response.getHeader("Content-Range"));
-		assertEquals(".", this.response.getContentAsString());
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
+		assertThat(this.response.getStatus()).isEqualTo(206);
+		assertThat(this.response.getContentType()).isEqualTo("text/plain");
+		assertThat(this.response.getContentLength()).isEqualTo(1);
+		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes 9-9/10");
+		assertThat(this.response.getContentAsString()).isEqualTo(".");
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void partialContentSuffixRange() throws Exception {
+	void partialContentSuffixRange() throws Exception {
 		this.request.addHeader("Range", "bytes=-1");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals(206, this.response.getStatus());
-		assertEquals("text/plain", this.response.getContentType());
-		assertEquals(1, this.response.getContentLength());
-		assertEquals("bytes 9-9/10", this.response.getHeader("Content-Range"));
-		assertEquals(".", this.response.getContentAsString());
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
+		assertThat(this.response.getStatus()).isEqualTo(206);
+		assertThat(this.response.getContentType()).isEqualTo("text/plain");
+		assertThat(this.response.getContentLength()).isEqualTo(1);
+		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes 9-9/10");
+		assertThat(this.response.getContentAsString()).isEqualTo(".");
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void partialContentSuffixRangeLargeSuffix() throws Exception {
+	void partialContentSuffixRangeLargeSuffix() throws Exception {
 		this.request.addHeader("Range", "bytes=-11");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals(206, this.response.getStatus());
-		assertEquals("text/plain", this.response.getContentType());
-		assertEquals(10, this.response.getContentLength());
-		assertEquals("bytes 0-9/10", this.response.getHeader("Content-Range"));
-		assertEquals("Some text.", this.response.getContentAsString());
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
+		assertThat(this.response.getStatus()).isEqualTo(206);
+		assertThat(this.response.getContentType()).isEqualTo("text/plain");
+		assertThat(this.response.getContentLength()).isEqualTo(10);
+		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes 0-9/10");
+		assertThat(this.response.getContentAsString()).isEqualTo("Some text.");
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void partialContentInvalidRangeHeader() throws Exception {
+	void partialContentInvalidRangeHeader() throws Exception {
 		this.request.addHeader("Range", "bytes= foo bar");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals(416, this.response.getStatus());
-		assertEquals("bytes */10", this.response.getHeader("Content-Range"));
-		assertEquals("bytes", this.response.getHeader("Accept-Ranges"));
-		assertEquals(1, this.response.getHeaders("Accept-Ranges").size());
+		assertThat(this.response.getStatus()).isEqualTo(416);
+		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes */10");
+		assertThat(this.response.getHeader("Accept-Ranges")).isEqualTo("bytes");
+		assertThat(this.response.getHeaders("Accept-Ranges")).hasSize(1);
 	}
 
 	@Test
-	public void partialContentMultipleByteRanges() throws Exception {
+	void partialContentMultipleByteRanges() throws Exception {
 		this.request.addHeader("Range", "bytes=0-1, 4-5, 8-9");
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals(206, this.response.getStatus());
-		assertTrue(this.response.getContentType().startsWith("multipart/byteranges; boundary="));
+		assertThat(this.response.getStatus()).isEqualTo(206);
+		assertThat(this.response.getContentType().startsWith("multipart/byteranges; boundary=")).isTrue();
 
 		String boundary = "--" + this.response.getContentType().substring(31);
 
 		String content = this.response.getContentAsString();
 		String[] ranges = StringUtils.tokenizeToStringArray(content, "\r\n", false, true);
 
-		assertEquals(boundary, ranges[0]);
-		assertEquals("Content-Type: text/plain", ranges[1]);
-		assertEquals("Content-Range: bytes 0-1/10", ranges[2]);
-		assertEquals("So", ranges[3]);
+		assertThat(ranges[0]).isEqualTo(boundary);
+		assertThat(ranges[1]).isEqualTo("Content-Type: text/plain");
+		assertThat(ranges[2]).isEqualTo("Content-Range: bytes 0-1/10");
+		assertThat(ranges[3]).isEqualTo("So");
 
-		assertEquals(boundary, ranges[4]);
-		assertEquals("Content-Type: text/plain", ranges[5]);
-		assertEquals("Content-Range: bytes 4-5/10", ranges[6]);
-		assertEquals(" t", ranges[7]);
+		assertThat(ranges[4]).isEqualTo(boundary);
+		assertThat(ranges[5]).isEqualTo("Content-Type: text/plain");
+		assertThat(ranges[6]).isEqualTo("Content-Range: bytes 4-5/10");
+		assertThat(ranges[7]).isEqualTo(" t");
 
-		assertEquals(boundary, ranges[8]);
-		assertEquals("Content-Type: text/plain", ranges[9]);
-		assertEquals("Content-Range: bytes 8-9/10", ranges[10]);
-		assertEquals("t.", ranges[11]);
+		assertThat(ranges[8]).isEqualTo(boundary);
+		assertThat(ranges[9]).isEqualTo("Content-Type: text/plain");
+		assertThat(ranges[10]).isEqualTo("Content-Range: bytes 8-9/10");
+		assertThat(ranges[11]).isEqualTo("t.");
+	}
+
+	@Test  // gh-25976
+	void partialContentByteRangeWithEncodedResource(GzipSupport.GzippedFiles gzippedFiles) throws Exception {
+		String path = "js/foo.js";
+		gzippedFiles.create(path);
+
+		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
+		handler.setResourceResolvers(List.of(new EncodedResourceResolver(), new PathResourceResolver()));
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
+		handler.setServletContext(new MockServletContext());
+		handler.afterPropertiesSet();
+
+		this.request.addHeader("Accept-Encoding", "gzip");
+		this.request.addHeader("Range", "bytes=0-1");
+		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, path);
+		handler.handleRequest(this.request, this.response);
+
+		assertThat(this.response.getStatus()).isEqualTo(206);
+		assertThat(this.response.getHeaderNames()).containsExactlyInAnyOrder(
+				"Content-Type", "Content-Length", "Content-Range", "Accept-Ranges",
+				"Last-Modified", "Content-Encoding", "Vary");
+
+		assertThat(this.response.getContentType()).isEqualTo("text/javascript");
+		assertThat(this.response.getContentLength()).isEqualTo(2);
+		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes 0-1/66");
+		assertThat(this.response.getHeaderValues("Accept-Ranges")).containsExactly("bytes");
+		assertThat(this.response.getHeaderValues("Content-Encoding")).containsExactly("gzip");
+		assertThat(this.response.getHeaderValues("Vary")).containsExactly("Accept-Encoding");
+	}
+
+	@Test  // gh-25976
+	void partialContentWithHttpHead() throws Exception {
+		this.request.setMethod("HEAD");
+		this.request.addHeader("Range", "bytes=0-1");
+		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.txt");
+		this.handler.handleRequest(this.request, this.response);
+
+		assertThat(this.response.getStatus()).isEqualTo(206);
+		assertThat(this.response.getContentType()).isEqualTo("text/plain");
+		assertThat(this.response.getContentLength()).isEqualTo(2);
+		assertThat(this.response.getHeader("Content-Range")).isEqualTo("bytes 0-1/10");
+		assertThat(this.response.getHeaderValues("Accept-Ranges")).containsExactly("bytes");
 	}
 
 	@Test  // SPR-14005
-	public void doOverwriteExistingCacheControlHeaders() throws Exception {
+	void doOverwriteExistingCacheControlHeaders() throws Exception {
 		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
 		this.response.setHeader("Cache-Control", "no-store");
 
 		this.handler.handleRequest(this.request, this.response);
 
-		assertEquals("max-age=3600", this.response.getHeader("Cache-Control"));
+		assertThat(this.response.getHeader("Cache-Control")).isEqualTo("max-age=3600");
+	}
+
+	@Test
+	void ignoreLastModified() throws Exception {
+		this.request.setAttribute(HandlerMapping.PATH_WITHIN_HANDLER_MAPPING_ATTRIBUTE, "foo.css");
+		this.handler.setUseLastModified(false);
+		this.handler.handleRequest(this.request, this.response);
+
+		assertThat(this.response.getContentType()).isEqualTo("text/css");
+		assertThat(this.response.getContentLength()).isEqualTo(17);
+		assertThat(this.response.containsHeader("Last-Modified")).isFalse();
+		assertThat(this.response.getContentAsString()).isEqualTo("h1 { color:red; }");
+	}
+
+	@Test
+	void servletContextRootValidation() {
+		StaticWebApplicationContext context = new StaticWebApplicationContext() {
+			@Override
+			public Resource getResource(String location) {
+				return new FileSystemResource("/");
+			}
+		};
+
+		ResourceHttpRequestHandler handler = new ResourceHttpRequestHandler();
+		handler.setLocationValues(List.of("/"));
+		handler.setApplicationContext(context);
+
+		assertThatIllegalStateException().isThrownBy(handler::afterPropertiesSet)
+				.withMessage("The String-based location \"/\" should be relative to the web application root but " +
+						"resolved to a Resource of type: class org.springframework.core.io.FileSystemResource. " +
+						"If this is intentional, please pass it as a pre-configured Resource via setLocations.");
 	}
 
 
